commit bilingual contents

--- a/docs/visual-basic/misc/bc30066.md
+++ b/docs/visual-basic/misc/bc30066.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30066
 ms.assetid: 09e7e766-e35d-4282-b949-d227f733f950
-ms.openlocfilehash: fa0c8fc99721b5f27ab2b74a4be5833ff7714aa6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: fc7f9cd9b1192c53cec9ef95752d9f42fead1427
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622235"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381323"
 ---
-# <a name="exit-property-is-not-valid-in-a-function-or-sub"></a><span data-ttu-id="cf764-102">Exit Property' non è valido in Function o Sub</span><span class="sxs-lookup"><span data-stu-id="cf764-102">'Exit Property' is not valid in a Function or Sub</span></span>
-<span data-ttu-id="cf764-103">`Exit Property` viene visualizzato in una routine `Function` o `Sub` .</span><span class="sxs-lookup"><span data-stu-id="cf764-103">`Exit Property` appears in a `Function` procedure or a `Sub` procedure.</span></span> <span data-ttu-id="cf764-104">Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.</span><span class="sxs-lookup"><span data-stu-id="cf764-104">An `Exit` statement must match the block in which it occurs.</span></span>  
+# <a name="exit-property-is-not-valid-in-a-function-or-sub"></a><span data-ttu-id="4c746-102">Exit Property' non è valido in Function o Sub</span><span class="sxs-lookup"><span data-stu-id="4c746-102">'Exit Property' is not valid in a Function or Sub</span></span>
+<span data-ttu-id="4c746-103">`Exit Property` viene visualizzato in una routine `Function` o `Sub` .</span><span class="sxs-lookup"><span data-stu-id="4c746-103">`Exit Property` appears in a `Function` procedure or a `Sub` procedure.</span></span> <span data-ttu-id="4c746-104">Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.</span><span class="sxs-lookup"><span data-stu-id="4c746-104">An `Exit` statement must match the block in which it occurs.</span></span>  
   
- <span data-ttu-id="cf764-105">**ID errore:** BC30066</span><span class="sxs-lookup"><span data-stu-id="cf764-105">**Error ID:** BC30066</span></span>  
+ <span data-ttu-id="4c746-105">**ID errore:** BC30066</span><span class="sxs-lookup"><span data-stu-id="4c746-105">**Error ID:** BC30066</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cf764-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cf764-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4c746-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4c746-106">To correct this error</span></span>  
   
-- <span data-ttu-id="cf764-107">Sostituire `Exit Property` con l'istruzione `Exit Function` o `Exit Sub` in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="cf764-107">Replace the `Exit Property` with the `Exit Function` or `Exit Sub` statement as appropriate.</span></span>  
+- <span data-ttu-id="4c746-107">Sostituire `Exit Property` con l'istruzione `Exit Function` o `Exit Sub` in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="4c746-107">Replace the `Exit Property` with the `Exit Function` or `Exit Sub` statement as appropriate.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cf764-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cf764-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4c746-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4c746-108">See also</span></span>
 
-- [<span data-ttu-id="cf764-109">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="cf764-109">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [<span data-ttu-id="cf764-110">Routine Function</span><span class="sxs-lookup"><span data-stu-id="cf764-110">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [<span data-ttu-id="cf764-111">Routine Property</span><span class="sxs-lookup"><span data-stu-id="cf764-111">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="4c746-109">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="4c746-109">Sub Procedures</span></span>](../programming-guide/language-features/procedures/sub-procedures.md)
+- [<span data-ttu-id="4c746-110">Routine Function</span><span class="sxs-lookup"><span data-stu-id="4c746-110">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="4c746-111">Routine Property</span><span class="sxs-lookup"><span data-stu-id="4c746-111">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
