--- a/docs/visual-basic/misc/bc30628.md
+++ b/docs/visual-basic/misc/bc30628.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30628
 ms.assetid: 131ecce1-6378-43fb-af0b-cdf5a0350cec
-ms.openlocfilehash: 9af4e37f8e03cde3cac3daa400eb823d43148095
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 74f7be4a1ac3aa24ceb1124ca2228e3106c1c060
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646658"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415258"
 ---
-# <a name="structures-cannot-have-inherits-statements"></a><span data-ttu-id="bfc14-102">Le strutture non possono contenere istruzioni 'Inherits'</span><span class="sxs-lookup"><span data-stu-id="bfc14-102">Structures cannot have 'Inherits' statements</span></span>
-<span data-ttu-id="bfc14-103">A differenza delle classi, le strutture non supportano l'ereditarietà.</span><span class="sxs-lookup"><span data-stu-id="bfc14-103">Unlike classes, structures do not support inheritance.</span></span>  
+# <a name="structures-cannot-have-inherits-statements"></a><span data-ttu-id="4d564-102">Le strutture non possono contenere istruzioni 'Inherits'</span><span class="sxs-lookup"><span data-stu-id="4d564-102">Structures cannot have 'Inherits' statements</span></span>
+<span data-ttu-id="4d564-103">A differenza delle classi, le strutture non supportano l'ereditarietà.</span><span class="sxs-lookup"><span data-stu-id="4d564-103">Unlike classes, structures do not support inheritance.</span></span>  
   
- <span data-ttu-id="bfc14-104">**ID errore:** BC30628</span><span class="sxs-lookup"><span data-stu-id="bfc14-104">**Error ID:** BC30628</span></span>  
+ <span data-ttu-id="4d564-104">**ID errore:** BC30628</span><span class="sxs-lookup"><span data-stu-id="4d564-104">**Error ID:** BC30628</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bfc14-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bfc14-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4d564-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4d564-105">To correct this error</span></span>  
   
-- <span data-ttu-id="bfc14-106">Rimuovere l'istruzione `Inherits` dalla struttura.</span><span class="sxs-lookup"><span data-stu-id="bfc14-106">Remove the `Inherits` statement from the structure.</span></span>  
+- <span data-ttu-id="4d564-106">Rimuovere l'istruzione `Inherits` dalla struttura.</span><span class="sxs-lookup"><span data-stu-id="4d564-106">Remove the `Inherits` statement from the structure.</span></span>  
   
-- <span data-ttu-id="bfc14-107">Riprogettare l'applicazione per usare le classi.</span><span class="sxs-lookup"><span data-stu-id="bfc14-107">Redesign your application to use classes instead.</span></span>  
+- <span data-ttu-id="4d564-107">Riprogettare l'applicazione per usare le classi.</span><span class="sxs-lookup"><span data-stu-id="4d564-107">Redesign your application to use classes instead.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bfc14-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bfc14-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4d564-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4d564-108">See also</span></span>
 
-- [<span data-ttu-id="bfc14-109">Strutture</span><span class="sxs-lookup"><span data-stu-id="bfc14-109">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)
-- [<span data-ttu-id="bfc14-110">Strutture e classi</span><span class="sxs-lookup"><span data-stu-id="bfc14-110">Structures and Classes</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
+- [<span data-ttu-id="4d564-109">Strutture</span><span class="sxs-lookup"><span data-stu-id="4d564-109">Structures</span></span>](../programming-guide/language-features/data-types/structures.md)
+- [<span data-ttu-id="4d564-110">Strutture e classi</span><span class="sxs-lookup"><span data-stu-id="4d564-110">Structures and Classes</span></span>](../programming-guide/language-features/data-types/structures-and-classes.md)
