--- a/docs/visual-basic/misc/bc30643.md
+++ b/docs/visual-basic/misc/bc30643.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà '<propertyname>' è di tipo non supportato
+title: La proprietà '<propertyname>' è di tipo non supportato
 ms.date: 07/20/2015
 f1_keywords:
 - bc30643
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30643
 ms.assetid: 1b1b3d99-7436-4956-9266-06a5484336ab
-ms.openlocfilehash: bb15ce9c12872004b96b4c1b775d7e9454630782
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2f1460b501e32d3e43868650b63ba14bcd06bea7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646523"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415089"
 ---
-# <a name="property-propertyname-is-of-an-unsupported-type"></a><span data-ttu-id="4f300-102">Proprietà '\<NomeProprietà >' è di tipo non supportato</span><span class="sxs-lookup"><span data-stu-id="4f300-102">Property '\<propertyname>' is of an unsupported type</span></span>
-<span data-ttu-id="4f300-103">Una proprietà in un assembly di riferimento contiene un tipo che non può essere rappresentato.</span><span class="sxs-lookup"><span data-stu-id="4f300-103">A property in a referenced assembly contains a type that cannot be represented.</span></span>  
+# <a name="property-propertyname-is-of-an-unsupported-type"></a><span data-ttu-id="31c49-102">La proprietà '\<propertyname>' è di tipo non supportato</span><span class="sxs-lookup"><span data-stu-id="31c49-102">Property '\<propertyname>' is of an unsupported type</span></span>
+<span data-ttu-id="31c49-103">Una proprietà in un assembly di riferimento contiene un tipo che non può essere rappresentato.</span><span class="sxs-lookup"><span data-stu-id="31c49-103">A property in a referenced assembly contains a type that cannot be represented.</span></span>  
   
- <span data-ttu-id="4f300-104">**ID errore:** BC30643</span><span class="sxs-lookup"><span data-stu-id="4f300-104">**Error ID:** BC30643</span></span>  
+ <span data-ttu-id="31c49-104">**ID errore:** BC30643</span><span class="sxs-lookup"><span data-stu-id="31c49-104">**Error ID:** BC30643</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4f300-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4f300-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="31c49-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="31c49-105">To correct this error</span></span>  
   
-- <span data-ttu-id="4f300-106">Specificare un tipo che possa essere usato con l'applicazione.</span><span class="sxs-lookup"><span data-stu-id="4f300-106">Specify a type that can be used with your application.</span></span>  
+- <span data-ttu-id="31c49-106">Specificare un tipo che possa essere usato con l'applicazione.</span><span class="sxs-lookup"><span data-stu-id="31c49-106">Specify a type that can be used with your application.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4f300-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4f300-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="31c49-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="31c49-107">See also</span></span>
 
-- [<span data-ttu-id="4f300-108">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="4f300-108">Data Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/index.md)
+- [<span data-ttu-id="31c49-108">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="31c49-108">Data Types</span></span>](../programming-guide/language-features/data-types/index.md)
