--- a/docs/visual-basic/misc/bc32084.md
+++ b/docs/visual-basic/misc/bc32084.md
@@ -1,5 +1,5 @@
 ---
-title: Il parametro di<typeparametername1>tipo '' deve contenere un vincolo ' New ' o ' Structure ' per soddisfare il vincolo ' New ' per il parametro di tipo<typeparametername2>''
+title: Il parametro di tipo ' <typeparametername1> ' deve contenere un vincolo ' New ' o ' Structure ' per soddisfare il vincolo ' New ' per il parametro di tipo ' <typeparametername2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32084
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - BC32084
 ms.assetid: a7ff58d3-8c67-40e4-9fd8-92cc00524c22
-ms.openlocfilehash: 89af1e27410abeb9e8afddf61b60bc52998a265f
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: dff94ca7f0da2d7076729885d8a1615069876d95
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512925"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358841"
 ---
-# <a name="type-parameter-typeparametername1-must-have-either-a-new-constraint-or-a-structure-constraint-to-satisfy-the-new-constraint-for-type-parameter-typeparametername2"></a><span data-ttu-id="aba00-102">Il parametro di\<tipo ' nomeparametrotipo1 >' deve contenere un vincolo ' New ' o ' Structure ' per soddisfare il vincolo ' New ' per il parametro di tipo\<' nomeparametrotipo2 >'</span><span class="sxs-lookup"><span data-stu-id="aba00-102">Type parameter '\<typeparametername1>' must have either a 'New' constraint or a 'Structure' constraint to satisfy the 'New' constraint for type parameter '\<typeparametername2>'</span></span>
+# <a name="type-parameter-typeparametername1-must-have-either-a-new-constraint-or-a-structure-constraint-to-satisfy-the-new-constraint-for-type-parameter-typeparametername2"></a><span data-ttu-id="60619-102">Il parametro di tipo ' \<typeparametername1> ' deve contenere un vincolo ' New ' o ' Structure ' per soddisfare il vincolo ' New ' per il parametro di tipo ' \<typeparametername2> '</span><span class="sxs-lookup"><span data-stu-id="60619-102">Type parameter '\<typeparametername1>' must have either a 'New' constraint or a 'Structure' constraint to satisfy the 'New' constraint for type parameter '\<typeparametername2>'</span></span>
 
-<span data-ttu-id="aba00-103">Un'istruzione crea un tipo generico che passa un parametro di tipo che non è vincolato per soddisfare un vincolo `New` .</span><span class="sxs-lookup"><span data-stu-id="aba00-103">A statement constructs a generic type passing a type parameter that is not constrained to satisfy a `New` constraint.</span></span>
+<span data-ttu-id="60619-103">Un'istruzione crea un tipo generico che passa un parametro di tipo che non è vincolato per soddisfare un vincolo `New` .</span><span class="sxs-lookup"><span data-stu-id="60619-103">A statement constructs a generic type passing a type parameter that is not constrained to satisfy a `New` constraint.</span></span>
 
-<span data-ttu-id="aba00-104">Il vincolo `New` indica che l'argomento di tipo fornito a tale parametro di tipo deve esporre un costruttore senza parametri accessibile al codice che crea oggetti in base ad esso.</span><span class="sxs-lookup"><span data-stu-id="aba00-104">The `New` constraint means that the type argument supplied to that type parameter must expose a parameterless constructor accessible to the code that creates objects from it.</span></span> <span data-ttu-id="aba00-105">Tutti i tipi valore hanno costruttori senza parametri, ma non tutti i tipi riferimento li hanno.</span><span class="sxs-lookup"><span data-stu-id="aba00-105">All value types have parameterless constructors, but not all reference types do.</span></span> <span data-ttu-id="aba00-106">Di conseguenza il vincolo `Structure` soddisfa il vincolo `New` , ma il vincolo `Class` o un nome della classe o interfaccia, non lo soddisfa.</span><span class="sxs-lookup"><span data-stu-id="aba00-106">Therefore the `Structure` constraint satisfies the `New` constraint, but the `Class` constraint, or a class or interface name, does not.</span></span>
+<span data-ttu-id="60619-104">Il vincolo `New` indica che l'argomento di tipo fornito a tale parametro di tipo deve esporre un costruttore senza parametri accessibile al codice che crea oggetti in base ad esso.</span><span class="sxs-lookup"><span data-stu-id="60619-104">The `New` constraint means that the type argument supplied to that type parameter must expose a parameterless constructor accessible to the code that creates objects from it.</span></span> <span data-ttu-id="60619-105">Tutti i tipi valore hanno costruttori senza parametri, ma non tutti i tipi riferimento li hanno.</span><span class="sxs-lookup"><span data-stu-id="60619-105">All value types have parameterless constructors, but not all reference types do.</span></span> <span data-ttu-id="60619-106">Di conseguenza il vincolo `Structure` soddisfa il vincolo `New` , ma il vincolo `Class` o un nome della classe o interfaccia, non lo soddisfa.</span><span class="sxs-lookup"><span data-stu-id="60619-106">Therefore the `Structure` constraint satisfies the `New` constraint, but the `Class` constraint, or a class or interface name, does not.</span></span>
 
-<span data-ttu-id="aba00-107">Le istruzioni seguenti possono generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="aba00-107">The following statements can generate this error.</span></span>
+<span data-ttu-id="60619-107">Le istruzioni seguenti possono generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="60619-107">The following statements can generate this error.</span></span>
 
 ```vb
 Public Class c1(Of t As New)
@@ -30,24 +30,24 @@ Public Class c2(Of u)
 End Class
 ```
 
-<span data-ttu-id="aba00-108">Quando la classe `c2` crea un oggetto in base a `c1`, il parametro di tipo `u` non soddisfa il vincolo di `New` sul parametro di tipo `t`.</span><span class="sxs-lookup"><span data-stu-id="aba00-108">When class `c2` creates an object from `c1`, type parameter `u` does not satisfy the `New` constraint on type parameter `t`.</span></span>
+<span data-ttu-id="60619-108">Quando la classe `c2` crea un oggetto in base a `c1`, il parametro di tipo `u` non soddisfa il vincolo di `New` sul parametro di tipo `t`.</span><span class="sxs-lookup"><span data-stu-id="60619-108">When class `c2` creates an object from `c1`, type parameter `u` does not satisfy the `New` constraint on type parameter `t`.</span></span>
 
-<span data-ttu-id="aba00-109">**ID errore:** BC32084</span><span class="sxs-lookup"><span data-stu-id="aba00-109">**Error ID:** BC32084</span></span>
+<span data-ttu-id="60619-109">**ID errore:** BC32084</span><span class="sxs-lookup"><span data-stu-id="60619-109">**Error ID:** BC32084</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="aba00-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aba00-110">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="60619-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="60619-110">To correct this error</span></span>
 
-- <span data-ttu-id="aba00-111">Se il parametro di tipo che deve essere passato al tipo generico può soddisfare il vincolo `Structure` o `New` , aggiungere il vincolo appropriato alla relativa definizione.</span><span class="sxs-lookup"><span data-stu-id="aba00-111">If the type parameter to be passed to the generic type can satisfy the `Structure` or `New` constraint, then add the appropriate constraint to its definition.</span></span>
+- <span data-ttu-id="60619-111">Se il parametro di tipo che deve essere passato al tipo generico può soddisfare il vincolo `Structure` o `New` , aggiungere il vincolo appropriato alla relativa definizione.</span><span class="sxs-lookup"><span data-stu-id="60619-111">If the type parameter to be passed to the generic type can satisfy the `Structure` or `New` constraint, then add the appropriate constraint to its definition.</span></span>
 
   ```vb
   Public Class c2(Of u As Structure)
   ```
 
-- <span data-ttu-id="aba00-112">Se il parametro di tipo non riesce a soddisfare il vincolo `Structure` o `New` , non passarlo al tipo generico.</span><span class="sxs-lookup"><span data-stu-id="aba00-112">If the type parameter cannot satisfy the `Structure` or `New` constraint, then do not pass it to the generic type.</span></span> <span data-ttu-id="aba00-113">È necessario passare qualcos'altro come argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="aba00-113">You must pass something else as the type argument.</span></span>
+- <span data-ttu-id="60619-112">Se il parametro di tipo non riesce a soddisfare il vincolo `Structure` o `New` , non passarlo al tipo generico.</span><span class="sxs-lookup"><span data-stu-id="60619-112">If the type parameter cannot satisfy the `Structure` or `New` constraint, then do not pass it to the generic type.</span></span> <span data-ttu-id="60619-113">È necessario passare qualcos'altro come argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="60619-113">You must pass something else as the type argument.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="aba00-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aba00-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="60619-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="60619-114">See also</span></span>
 
-- [<span data-ttu-id="aba00-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="aba00-115">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="aba00-116">Operatore New</span><span class="sxs-lookup"><span data-stu-id="aba00-116">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)
-- [<span data-ttu-id="aba00-117">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="aba00-117">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="aba00-118">Classe (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="aba00-118">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="aba00-119">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="aba00-119">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="60619-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="60619-115">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="60619-116">Operatore New</span><span class="sxs-lookup"><span data-stu-id="60619-116">New Operator</span></span>](../language-reference/operators/new-operator.md)
+- [<span data-ttu-id="60619-117">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="60619-117">Structure (Visual Basic)</span></span>](../language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="60619-118">Class (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="60619-118">Class (Visual Basic)</span></span>](../language-reference/statements/class-statement.md)
+- [<span data-ttu-id="60619-119">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="60619-119">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
