--- a/docs/visual-basic/misc/bc36012.md
+++ b/docs/visual-basic/misc/bc36012.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36012
 ms.assetid: f98c54b0-6ede-48b6-aa31-438664c219f3
-ms.openlocfilehash: e72bcb141adb077eef602f264d7f5224efc47a2f
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: e6fc9e3222e3cd7c21fb8c77b6314c7d026daf9e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69666901"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378952"
 ---
-# <a name="using-resource-variable-type-can-not-be-array-type"></a><span data-ttu-id="aca20-102">Il tipo di variabile della risorsa 'Using' non può essere un tipo matrice</span><span class="sxs-lookup"><span data-stu-id="aca20-102">'Using' resource variable type can not be array type</span></span>
-<span data-ttu-id="aca20-103">Un'istruzione `Using` specifica una variabile di matrice per una risorsa.</span><span class="sxs-lookup"><span data-stu-id="aca20-103">A `Using` statement specifies an array variable for a resource.</span></span>  
+# <a name="using-resource-variable-type-can-not-be-array-type"></a><span data-ttu-id="10f04-102">Il tipo di variabile della risorsa 'Using' non può essere un tipo matrice</span><span class="sxs-lookup"><span data-stu-id="10f04-102">'Using' resource variable type can not be array type</span></span>
+<span data-ttu-id="10f04-103">Un'istruzione `Using` specifica una variabile di matrice per una risorsa.</span><span class="sxs-lookup"><span data-stu-id="10f04-103">A `Using` statement specifies an array variable for a resource.</span></span>  
   
- <span data-ttu-id="aca20-104">La classe <xref:System.Array> non implementa l'interfaccia <xref:System.IDisposable> , quindi il blocco `Using` non può chiamare il metodo <xref:System.IDisposable.Dispose%2A> su una risorsa di matrice.</span><span class="sxs-lookup"><span data-stu-id="aca20-104">The <xref:System.Array> class does not implement the <xref:System.IDisposable> interface, so the `Using` block cannot call the <xref:System.IDisposable.Dispose%2A> method on an array resource.</span></span>  
+ <span data-ttu-id="10f04-104">La classe <xref:System.Array> non implementa l'interfaccia <xref:System.IDisposable> , quindi il blocco `Using` non può chiamare il metodo <xref:System.IDisposable.Dispose%2A> su una risorsa di matrice.</span><span class="sxs-lookup"><span data-stu-id="10f04-104">The <xref:System.Array> class does not implement the <xref:System.IDisposable> interface, so the `Using` block cannot call the <xref:System.IDisposable.Dispose%2A> method on an array resource.</span></span>  
   
- <span data-ttu-id="aca20-105">**ID errore:** BC36012</span><span class="sxs-lookup"><span data-stu-id="aca20-105">**Error ID:** BC36012</span></span>  
+ <span data-ttu-id="10f04-105">**ID errore:** BC36012</span><span class="sxs-lookup"><span data-stu-id="10f04-105">**Error ID:** BC36012</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="aca20-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aca20-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="10f04-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="10f04-106">To correct this error</span></span>  
   
-- <span data-ttu-id="aca20-107">Usare un tipo diverso di risorsa di sistema nel blocco `Using` .</span><span class="sxs-lookup"><span data-stu-id="aca20-107">Use a different type of system resource in the `Using` block.</span></span>  
+- <span data-ttu-id="10f04-107">Usare un tipo diverso di risorsa di sistema nel blocco `Using` .</span><span class="sxs-lookup"><span data-stu-id="10f04-107">Use a different type of system resource in the `Using` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="aca20-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aca20-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="10f04-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="10f04-108">See also</span></span>
 
-- [<span data-ttu-id="aca20-109">Istruzione Using</span><span class="sxs-lookup"><span data-stu-id="aca20-109">Using Statement</span></span>](../../visual-basic/language-reference/statements/using-statement.md)
-- [<span data-ttu-id="aca20-110">Procedura: Eliminare una risorsa di sistema</span><span class="sxs-lookup"><span data-stu-id="aca20-110">How to: Dispose of a System Resource</span></span>](../../visual-basic/programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
-- [<span data-ttu-id="aca20-111">Matrici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="aca20-111">Arrays in Visual Basic</span></span>](../programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="10f04-109">Istruzione using</span><span class="sxs-lookup"><span data-stu-id="10f04-109">Using Statement</span></span>](../language-reference/statements/using-statement.md)
+- [<span data-ttu-id="10f04-110">Procedura: eliminare una risorsa di sistema</span><span class="sxs-lookup"><span data-stu-id="10f04-110">How to: Dispose of a System Resource</span></span>](../programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
+- [<span data-ttu-id="10f04-111">Matrici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="10f04-111">Arrays in Visual Basic</span></span>](../programming-guide/language-features/arrays/index.md)
