--- a/docs/visual-basic/misc/bc40051.md
+++ b/docs/visual-basic/misc/bc40051.md
@@ -7,34 +7,34 @@ f1_keywords:
 helpviewer_keywords:
 - BC40051
 ms.assetid: 623d5e48-7fb2-48a9-bbbb-92914b08c01c
-ms.openlocfilehash: 8a4d699c610781b5394217877c68dc61a1d56c2d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0640c2fd8d9b83e1ba73370619baeea3f6399041
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632276"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395779"
 ---
-# <a name="systemdiagnosticsdebuggerhiddenattribute-does-not-affect-get-or-set-when-applied-to-the-property-definition"></a><span data-ttu-id="ebecb-102">System.Diagnostics.DebuggerHiddenAttribute non influisce su 'Get' o 'Set' quando viene applicato alla definizione della proprietà</span><span class="sxs-lookup"><span data-stu-id="ebecb-102">System.Diagnostics.DebuggerHiddenAttribute does not affect 'Get' or 'Set' when applied to the Property definition</span></span>
-<span data-ttu-id="ebecb-103">System.Diagnostics.DebuggerHiddenAttribute non influisce su 'Get' o 'Set' quando viene applicato alla definizione della proprietà.</span><span class="sxs-lookup"><span data-stu-id="ebecb-103">System.Diagnostics.DebuggerHiddenAttribute does not affect 'Get' or 'Set' when applied to the Property definition.</span></span> <span data-ttu-id="ebecb-104">Applicare l'attributo direttamente alle routine 'Get' e 'Set' come necessario.</span><span class="sxs-lookup"><span data-stu-id="ebecb-104">Apply the attribute directly to the 'Get' and 'Set' procedures as appropriate.</span></span>  
+# <a name="systemdiagnosticsdebuggerhiddenattribute-does-not-affect-get-or-set-when-applied-to-the-property-definition"></a><span data-ttu-id="30a0f-102">System.Diagnostics.DebuggerHiddenAttribute non influisce su 'Get' o 'Set' quando viene applicato alla definizione della proprietà</span><span class="sxs-lookup"><span data-stu-id="30a0f-102">System.Diagnostics.DebuggerHiddenAttribute does not affect 'Get' or 'Set' when applied to the Property definition</span></span>
+<span data-ttu-id="30a0f-103">System.Diagnostics.DebuggerHiddenAttribute non influisce su 'Get' o 'Set' quando viene applicato alla definizione della proprietà.</span><span class="sxs-lookup"><span data-stu-id="30a0f-103">System.Diagnostics.DebuggerHiddenAttribute does not affect 'Get' or 'Set' when applied to the Property definition.</span></span> <span data-ttu-id="30a0f-104">Applicare l'attributo direttamente alle routine 'Get' e 'Set' come necessario.</span><span class="sxs-lookup"><span data-stu-id="30a0f-104">Apply the attribute directly to the 'Get' and 'Set' procedures as appropriate.</span></span>  
   
- <span data-ttu-id="ebecb-105">L'attributo <xref:System.Diagnostics.DebuggerHiddenAttribute> viene applicato a una dichiarazione di proprietà.</span><span class="sxs-lookup"><span data-stu-id="ebecb-105">The <xref:System.Diagnostics.DebuggerHiddenAttribute> is applied to a property declaration.</span></span>  
+ <span data-ttu-id="30a0f-105">L'attributo <xref:System.Diagnostics.DebuggerHiddenAttribute> viene applicato a una dichiarazione di proprietà.</span><span class="sxs-lookup"><span data-stu-id="30a0f-105">The <xref:System.Diagnostics.DebuggerHiddenAttribute> is applied to a property declaration.</span></span>  
   
- <span data-ttu-id="ebecb-106">Il codice sorgente può applicare l'attributo <xref:System.Diagnostics.DebuggerHiddenAttribute> a una routine.</span><span class="sxs-lookup"><span data-stu-id="ebecb-106">Source code can apply the <xref:System.Diagnostics.DebuggerHiddenAttribute> to a procedure.</span></span> <span data-ttu-id="ebecb-107">In questo modo si segnala al debugger di Visual Studio di non fermarsi all'interno della routine e di non consentire l'impostazione di alcun punto di interruzione nella routine.</span><span class="sxs-lookup"><span data-stu-id="ebecb-107">Doing so signals the Visual Studio debugger not to stop inside the procedure and not to allow any breakpoints to be set in the procedure.</span></span>  
+ <span data-ttu-id="30a0f-106">Il codice sorgente può applicare l'attributo <xref:System.Diagnostics.DebuggerHiddenAttribute> a una routine.</span><span class="sxs-lookup"><span data-stu-id="30a0f-106">Source code can apply the <xref:System.Diagnostics.DebuggerHiddenAttribute> to a procedure.</span></span> <span data-ttu-id="30a0f-107">In questo modo si segnala al debugger di Visual Studio di non fermarsi all'interno della routine e di non consentire l'impostazione di alcun punto di interruzione nella routine.</span><span class="sxs-lookup"><span data-stu-id="30a0f-107">Doing so signals the Visual Studio debugger not to stop inside the procedure and not to allow any breakpoints to be set in the procedure.</span></span>  
   
- <span data-ttu-id="ebecb-108">Nonostante sia possibile applicare l'attributo <xref:System.Diagnostics.DebuggerHiddenAttribute> a una proprietà, non produce alcun effetto.</span><span class="sxs-lookup"><span data-stu-id="ebecb-108">Although you can apply <xref:System.Diagnostics.DebuggerHiddenAttribute> to a property, it does not have any effect.</span></span> <span data-ttu-id="ebecb-109">L'effetto desiderato può essere ottenuto soltanto se lo si applica alla routine `Get` o `Set` della proprietà.</span><span class="sxs-lookup"><span data-stu-id="ebecb-109">It has the effect that you want only if you apply it to the property's `Get` or `Set` procedure.</span></span>  
+ <span data-ttu-id="30a0f-108">Nonostante sia possibile applicare l'attributo <xref:System.Diagnostics.DebuggerHiddenAttribute> a una proprietà, non produce alcun effetto.</span><span class="sxs-lookup"><span data-stu-id="30a0f-108">Although you can apply <xref:System.Diagnostics.DebuggerHiddenAttribute> to a property, it does not have any effect.</span></span> <span data-ttu-id="30a0f-109">L'effetto desiderato può essere ottenuto soltanto se lo si applica alla routine `Get` o `Set` della proprietà.</span><span class="sxs-lookup"><span data-stu-id="30a0f-109">It has the effect that you want only if you apply it to the property's `Get` or `Set` procedure.</span></span>  
   
- <span data-ttu-id="ebecb-110">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="ebecb-110">By default, this message is a warning.</span></span> <span data-ttu-id="ebecb-111">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="ebecb-111">For information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="30a0f-110">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="30a0f-110">By default, this message is a warning.</span></span> <span data-ttu-id="30a0f-111">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="30a0f-111">For information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="ebecb-112">**ID errore:** BC40051</span><span class="sxs-lookup"><span data-stu-id="ebecb-112">**Error ID:** BC40051</span></span>  
+ <span data-ttu-id="30a0f-112">**ID errore:** BC40051</span><span class="sxs-lookup"><span data-stu-id="30a0f-112">**Error ID:** BC40051</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ebecb-113">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ebecb-113">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="30a0f-113">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="30a0f-113">To correct this error</span></span>  
   
-- <span data-ttu-id="ebecb-114">Rimuovere l'attributo <xref:System.Diagnostics.DebuggerHiddenAttribute> dalla dichiarazione di proprietà e applicarlo alla routine `Get` o `Set` della proprietà in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="ebecb-114">Remove the <xref:System.Diagnostics.DebuggerHiddenAttribute> from the property declaration and apply it to the property's `Get` or `Set` procedure as appropriate.</span></span>  
+- <span data-ttu-id="30a0f-114">Rimuovere l'attributo <xref:System.Diagnostics.DebuggerHiddenAttribute> dalla dichiarazione di proprietà e applicarlo alla routine `Get` o `Set` della proprietà in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="30a0f-114">Remove the <xref:System.Diagnostics.DebuggerHiddenAttribute> from the property declaration and apply it to the property's `Get` or `Set` procedure as appropriate.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ebecb-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ebecb-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="30a0f-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="30a0f-115">See also</span></span>
 
 - <xref:System.Diagnostics.DebuggerHiddenAttribute>
-- [<span data-ttu-id="ebecb-116">Routine Property</span><span class="sxs-lookup"><span data-stu-id="ebecb-116">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [<span data-ttu-id="ebecb-117">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="ebecb-117">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
-- [<span data-ttu-id="ebecb-118">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="ebecb-118">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
-- [<span data-ttu-id="ebecb-119">Istruzione Set</span><span class="sxs-lookup"><span data-stu-id="ebecb-119">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
+- [<span data-ttu-id="30a0f-116">Routine Property</span><span class="sxs-lookup"><span data-stu-id="30a0f-116">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="30a0f-117">Property Statement</span><span class="sxs-lookup"><span data-stu-id="30a0f-117">Property Statement</span></span>](../language-reference/statements/property-statement.md)
+- [<span data-ttu-id="30a0f-118">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="30a0f-118">Get Statement</span></span>](../language-reference/statements/get-statement.md)
+- [<span data-ttu-id="30a0f-119">Istruzione set</span><span class="sxs-lookup"><span data-stu-id="30a0f-119">Set Statement</span></span>](../language-reference/statements/set-statement.md)
