--- a/docs/visual-basic/misc/bc42030.md
+++ b/docs/visual-basic/misc/bc42030.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile '<variablename>' viene passato per riferimento prima che sia stato assegnato un valore
+title: La variabile '<variablename>' è stata passata per riferimento prima dell'assegnazione di un valore
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42030
@@ -7,39 +7,39 @@ f1_keywords:
 helpviewer_keywords:
 - BC42030
 ms.assetid: 8f1aae99-f032-4fdf-b6dc-3360cc5b94de
-ms.openlocfilehash: 53ab4765da275508f8a2cf1d93786522242672a7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1769470d281720185769c42a8c08e4966a2281d8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64751283"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395493"
 ---
-# <a name="variable-variablename-is-passed-by-reference-before-it-has-been-assigned-a-value"></a><span data-ttu-id="28911-102">Variabile '\<nomevariabile >' viene passato per riferimento prima che sia stato assegnato un valore</span><span class="sxs-lookup"><span data-stu-id="28911-102">Variable '\<variablename>' is passed by reference before it has been assigned a value</span></span>
-<span data-ttu-id="28911-103">Variabile '\<nomevariabile >' viene passato per riferimento prima che sia stato assegnato un valore.</span><span class="sxs-lookup"><span data-stu-id="28911-103">Variable '\<variablename>' is passed by reference before it has been assigned a value.</span></span> <span data-ttu-id="28911-104">È possibile che in fase di esecuzione venga restituita un'eccezione dovuta a un riferimento Null.</span><span class="sxs-lookup"><span data-stu-id="28911-104">A null reference exception could result at run time.</span></span>  
+# <a name="variable-variablename-is-passed-by-reference-before-it-has-been-assigned-a-value"></a><span data-ttu-id="9f429-102">La variabile '\<variablename>' è stata passata per riferimento prima dell'assegnazione di un valore</span><span class="sxs-lookup"><span data-stu-id="9f429-102">Variable '\<variablename>' is passed by reference before it has been assigned a value</span></span>
+<span data-ttu-id="9f429-103">La variabile ' \<variablename> ' viene passata per riferimento prima dell'assegnazione di un valore.</span><span class="sxs-lookup"><span data-stu-id="9f429-103">Variable '\<variablename>' is passed by reference before it has been assigned a value.</span></span> <span data-ttu-id="9f429-104">È possibile che in fase di esecuzione venga restituita un'eccezione dovuta a un riferimento Null.</span><span class="sxs-lookup"><span data-stu-id="9f429-104">A null reference exception could result at run time.</span></span>  
   
- <span data-ttu-id="28911-105">Una chiamata di routine passa una variabile come argomento a un parametro `ByRef` prima dell'assegnazione di qualsiasi valore alla variabile.</span><span class="sxs-lookup"><span data-stu-id="28911-105">A procedure call passes a variable as an argument to a `ByRef` parameter before any value is assigned to the variable.</span></span>  
+ <span data-ttu-id="9f429-105">Una chiamata di routine passa una variabile come argomento a un parametro `ByRef` prima dell'assegnazione di qualsiasi valore alla variabile.</span><span class="sxs-lookup"><span data-stu-id="9f429-105">A procedure call passes a variable as an argument to a `ByRef` parameter before any value is assigned to the variable.</span></span>  
   
- <span data-ttu-id="28911-106">Se a una variabile non è mai stato assegnato alcun valore, questa manterrà il valore predefinito per il tipo di dati.</span><span class="sxs-lookup"><span data-stu-id="28911-106">If a variable has never been assigned a value, it holds the default value for its data type.</span></span> <span data-ttu-id="28911-107">Per un tipo di dati di riferimento, il valore predefinito è [Nothing](../../visual-basic/language-reference/nothing.md).</span><span class="sxs-lookup"><span data-stu-id="28911-107">For a reference data type, that default value is [Nothing](../../visual-basic/language-reference/nothing.md).</span></span> <span data-ttu-id="28911-108">La lettura di una variabile di riferimento con un valore `Nothing` può causare un'eccezione <xref:System.NullReferenceException> in alcune circostanze.</span><span class="sxs-lookup"><span data-stu-id="28911-108">Reading a reference variable that has a value of `Nothing` can cause a <xref:System.NullReferenceException> in some circumstances.</span></span>  
+ <span data-ttu-id="9f429-106">Se a una variabile non è mai stato assegnato alcun valore, questa manterrà il valore predefinito per il tipo di dati.</span><span class="sxs-lookup"><span data-stu-id="9f429-106">If a variable has never been assigned a value, it holds the default value for its data type.</span></span> <span data-ttu-id="9f429-107">Per un tipo di dati di riferimento, il valore predefinito è [Nothing](../language-reference/nothing.md).</span><span class="sxs-lookup"><span data-stu-id="9f429-107">For a reference data type, that default value is [Nothing](../language-reference/nothing.md).</span></span> <span data-ttu-id="9f429-108">La lettura di una variabile di riferimento con un valore `Nothing` può causare un'eccezione <xref:System.NullReferenceException> in alcune circostanze.</span><span class="sxs-lookup"><span data-stu-id="9f429-108">Reading a reference variable that has a value of `Nothing` can cause a <xref:System.NullReferenceException> in some circumstances.</span></span>  
   
- <span data-ttu-id="28911-109">Il passaggio di un argomento a una routine `ByRef` espone la variabile sottostante all'argomento a possibili modifiche da parte della routine.</span><span class="sxs-lookup"><span data-stu-id="28911-109">Passing an argument to a procedure `ByRef` exposes the variable underlying the argument to possible modification by the procedure.</span></span>  
+ <span data-ttu-id="9f429-109">Il passaggio di un argomento a una routine `ByRef` espone la variabile sottostante all'argomento a possibili modifiche da parte della routine.</span><span class="sxs-lookup"><span data-stu-id="9f429-109">Passing an argument to a procedure `ByRef` exposes the variable underlying the argument to possible modification by the procedure.</span></span>  
   
- <span data-ttu-id="28911-110">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="28911-110">By default, this message is a warning.</span></span> <span data-ttu-id="28911-111">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="28911-111">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="9f429-110">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="9f429-110">By default, this message is a warning.</span></span> <span data-ttu-id="9f429-111">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="9f429-111">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="28911-112">**ID errore:** BC42030</span><span class="sxs-lookup"><span data-stu-id="28911-112">**Error ID:** BC42030</span></span>  
+ <span data-ttu-id="9f429-112">**ID errore:** BC42030</span><span class="sxs-lookup"><span data-stu-id="9f429-112">**Error ID:** BC42030</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="28911-113">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="28911-113">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9f429-113">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9f429-113">To correct this error</span></span>  
   
-- <span data-ttu-id="28911-114">Se si vuole che la routine assegni un valore alla variabile attraverso l'argomento `ByRef` e se il fatto che la variabile contiene già un valore non è importante, non è necessaria alcuna operazione.</span><span class="sxs-lookup"><span data-stu-id="28911-114">If you intend the procedure to assign a value to the variable through the `ByRef` argument, and if it does not matter whether the variable already holds a value, then no action is necessary.</span></span>  
+- <span data-ttu-id="9f429-114">Se si vuole che la routine assegni un valore alla variabile attraverso l'argomento `ByRef` e se il fatto che la variabile contiene già un valore non è importante, non è necessaria alcuna operazione.</span><span class="sxs-lookup"><span data-stu-id="9f429-114">If you intend the procedure to assign a value to the variable through the `ByRef` argument, and if it does not matter whether the variable already holds a value, then no action is necessary.</span></span>  
   
-- <span data-ttu-id="28911-115">Se la logica presente nella routine legge l'argomento prima di assegnargli un valore e se la variabile è un tipo valore, accertarsi che la logica della routine non dipenda dalla presenza di un valore predefinito nella variabile.</span><span class="sxs-lookup"><span data-stu-id="28911-115">If the logic in the procedure reads the argument before assigning any value to it, and if the variable is of a value type, then make sure that the procedure logic does not depend on whether the variable holds its default value or not.</span></span>  
+- <span data-ttu-id="9f429-115">Se la logica presente nella routine legge l'argomento prima di assegnargli un valore e se la variabile è un tipo valore, accertarsi che la logica della routine non dipenda dalla presenza di un valore predefinito nella variabile.</span><span class="sxs-lookup"><span data-stu-id="9f429-115">If the logic in the procedure reads the argument before assigning any value to it, and if the variable is of a value type, then make sure that the procedure logic does not depend on whether the variable holds its default value or not.</span></span>  
   
-- <span data-ttu-id="28911-116">Se la logica della routine legge l'argomento prima di assegnargli un valore e se la variabile è un tipo riferimento, accertarsi che la logica della routine sia in grado di gestire un valore di `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="28911-116">If the logic in the procedure reads the argument before assigning any value to it, and if the variable is of a reference type, then make sure that the procedure logic can handle a value of `Nothing`.</span></span> <span data-ttu-id="28911-117">Ad esempio, è possibile usare un [Try... Catch... Istruzione finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md) per intercettare un <xref:System.NullReferenceException>.</span><span class="sxs-lookup"><span data-stu-id="28911-117">For example, it could use a [Try...Catch...Finally Statement](../../visual-basic/language-reference/statements/try-catch-finally-statement.md) to catch a <xref:System.NullReferenceException>.</span></span>  
+- <span data-ttu-id="9f429-116">Se la logica della routine legge l'argomento prima di assegnargli un valore e se la variabile è un tipo riferimento, accertarsi che la logica della routine sia in grado di gestire un valore di `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="9f429-116">If the logic in the procedure reads the argument before assigning any value to it, and if the variable is of a reference type, then make sure that the procedure logic can handle a value of `Nothing`.</span></span> <span data-ttu-id="9f429-117">Ad esempio, potrebbe usare un [try... Rileva... Istruzione finally](../language-reference/statements/try-catch-finally-statement.md) per intercettare un oggetto <xref:System.NullReferenceException> .</span><span class="sxs-lookup"><span data-stu-id="9f429-117">For example, it could use a [Try...Catch...Finally Statement](../language-reference/statements/try-catch-finally-statement.md) to catch a <xref:System.NullReferenceException>.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="28911-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="28911-118">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9f429-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9f429-118">See also</span></span>
 
-- [<span data-ttu-id="28911-119">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="28911-119">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="28911-120">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="28911-120">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [<span data-ttu-id="28911-121">Passaggio di argomenti per valore e per riferimento</span><span class="sxs-lookup"><span data-stu-id="28911-121">Passing Arguments by Value and by Reference</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
-- [<span data-ttu-id="28911-122">ByRef</span><span class="sxs-lookup"><span data-stu-id="28911-122">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)
-- [<span data-ttu-id="28911-123">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="28911-123">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
-- [<span data-ttu-id="28911-124">Risoluzione dei problemi relativi alle variabili</span><span class="sxs-lookup"><span data-stu-id="28911-124">Troubleshooting Variables</span></span>](../../visual-basic/programming-guide/language-features/variables/troubleshooting-variables.md)
+- [<span data-ttu-id="9f429-119">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="9f429-119">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="9f429-120">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="9f429-120">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="9f429-121">Passaggio di argomenti per valore e per riferimento</span><span class="sxs-lookup"><span data-stu-id="9f429-121">Passing Arguments by Value and by Reference</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
+- [<span data-ttu-id="9f429-122">ByRef</span><span class="sxs-lookup"><span data-stu-id="9f429-122">ByRef</span></span>](../language-reference/modifiers/byref.md)
+- [<span data-ttu-id="9f429-123">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="9f429-123">Variable Declaration</span></span>](../programming-guide/language-features/variables/variable-declaration.md)
+- [<span data-ttu-id="9f429-124">Risoluzione dei problemi relativi alle variabili</span><span class="sxs-lookup"><span data-stu-id="9f429-124">Troubleshooting Variables</span></span>](../programming-guide/language-features/variables/troubleshooting-variables.md)
