--- a/docs/visual-basic/misc/bc30044.md
+++ b/docs/visual-basic/misc/bc30044.md
@@ -1,5 +1,5 @@
 ---
-title: "'<keyword>' non è valido all'interno di una struttura"
+title: "' <keyword> ' non è valido all'interno di una struttura"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30044
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30044
 ms.assetid: 252510cf-e084-47e4-9592-4aa8f94fabe4
-ms.openlocfilehash: c99424a95fda2cc8ce7d20b8c9736403570b7ed7
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 8b9fc352e3535c926ecf0186cba5189ea55d050d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69658763"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381472"
 ---
-# <a name="keyword-is-not-valid-within-a-structure"></a><span data-ttu-id="3632f-102">'\<keyword >' non è valido all'interno di una struttura</span><span class="sxs-lookup"><span data-stu-id="3632f-102">'\<keyword>' is not valid within a structure</span></span>
-<span data-ttu-id="3632f-103">Le strutture sono tipi valore, non tipi riferimento.</span><span class="sxs-lookup"><span data-stu-id="3632f-103">Structures are value types, not reference types.</span></span> <span data-ttu-id="3632f-104">Una struttura non è un'istanza creata da una classe, quindi le parole chiave `Me`, `MyClass`e `MyBase` sono prive di significato in una struttura.</span><span class="sxs-lookup"><span data-stu-id="3632f-104">A structure is not an instance created from a class, so the `Me`, `MyClass`, and `MyBase` keywords are meaningless in a structure.</span></span>  
+# <a name="keyword-is-not-valid-within-a-structure"></a><span data-ttu-id="0d0d7-102">' \<keyword> ' non è valido all'interno di una struttura</span><span class="sxs-lookup"><span data-stu-id="0d0d7-102">'\<keyword>' is not valid within a structure</span></span>
+<span data-ttu-id="0d0d7-103">Le strutture sono tipi valore, non tipi riferimento.</span><span class="sxs-lookup"><span data-stu-id="0d0d7-103">Structures are value types, not reference types.</span></span> <span data-ttu-id="0d0d7-104">Una struttura non è un'istanza creata da una classe, quindi le parole chiave `Me`, `MyClass`e `MyBase` sono prive di significato in una struttura.</span><span class="sxs-lookup"><span data-stu-id="0d0d7-104">A structure is not an instance created from a class, so the `Me`, `MyClass`, and `MyBase` keywords are meaningless in a structure.</span></span>  
   
- <span data-ttu-id="3632f-105">**ID errore:** BC30044</span><span class="sxs-lookup"><span data-stu-id="3632f-105">**Error ID:** BC30044</span></span>  
+ <span data-ttu-id="0d0d7-105">**ID errore:** BC30044</span><span class="sxs-lookup"><span data-stu-id="0d0d7-105">**Error ID:** BC30044</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3632f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3632f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0d0d7-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0d0d7-106">To correct this error</span></span>  
   
-- <span data-ttu-id="3632f-107">Modificare la struttura in una classe o rimuovere la parola chiave dalla routine.</span><span class="sxs-lookup"><span data-stu-id="3632f-107">Change the structure to a class, or remove the keyword from the procedure.</span></span>  
+- <span data-ttu-id="0d0d7-107">Modificare la struttura in una classe o rimuovere la parola chiave dalla routine.</span><span class="sxs-lookup"><span data-stu-id="0d0d7-107">Change the structure to a class, or remove the keyword from the procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3632f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3632f-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0d0d7-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0d0d7-108">See also</span></span>
 
-- [<span data-ttu-id="3632f-109">Me</span><span class="sxs-lookup"><span data-stu-id="3632f-109">Me</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
-- [<span data-ttu-id="3632f-110">MyClass</span><span class="sxs-lookup"><span data-stu-id="3632f-110">MyClass</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#myclass)
-- [<span data-ttu-id="3632f-111">MyBase</span><span class="sxs-lookup"><span data-stu-id="3632f-111">MyBase</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#mybase)
-- [<span data-ttu-id="3632f-112">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="3632f-112">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="0d0d7-109">Me stesso</span><span class="sxs-lookup"><span data-stu-id="0d0d7-109">Me</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
+- [<span data-ttu-id="0d0d7-110">MyClass</span><span class="sxs-lookup"><span data-stu-id="0d0d7-110">MyClass</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#myclass)
+- [<span data-ttu-id="0d0d7-111">MyBase</span><span class="sxs-lookup"><span data-stu-id="0d0d7-111">MyBase</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#mybase)
+- [<span data-ttu-id="0d0d7-112">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="0d0d7-112">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
