--- a/docs/visual-basic/misc/bc30270.md
+++ b/docs/visual-basic/misc/bc30270.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di metodo di interfaccia"
+title: "' <specifier> ' non è valido in una dichiarazione di metodo di interfaccia"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30270
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30270
 ms.assetid: 598f2944-3e5d-4686-b6f7-2b4bcaf5c211
-ms.openlocfilehash: 23a9e1f32669c8ed7a5f6063ad557a2b0716c693
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5ef6af69d960b908d2ac126c83cdd8479fbd8852
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027758"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390936"
 ---
-# <a name="specifier-is-not-valid-on-an-interface-method-declaration"></a><span data-ttu-id="bc11f-102">'\<identificatore >' non è valido in una dichiarazione di metodo di interfaccia</span><span class="sxs-lookup"><span data-stu-id="bc11f-102">'\<specifier>' is not valid on an interface method declaration</span></span>
-<span data-ttu-id="bc11f-103">Un'istruzione `Function` o `Sub` all'interno di un'interfaccia contiene una parola chiave non valida, ad esempio `Implements`.</span><span class="sxs-lookup"><span data-stu-id="bc11f-103">A `Function` or `Sub` statement inside an interface contains an invalid keyword, such as `Implements`.</span></span> <span data-ttu-id="bc11f-104">Un'interfaccia può solo definire i membri, non implementarli.</span><span class="sxs-lookup"><span data-stu-id="bc11f-104">An interface can only define members, not implement them.</span></span>  
+# <a name="specifier-is-not-valid-on-an-interface-method-declaration"></a><span data-ttu-id="c4cba-102">' \<specifier> ' non è valido in una dichiarazione di metodo di interfaccia</span><span class="sxs-lookup"><span data-stu-id="c4cba-102">'\<specifier>' is not valid on an interface method declaration</span></span>
+<span data-ttu-id="c4cba-103">Un'istruzione `Function` o `Sub` all'interno di un'interfaccia contiene una parola chiave non valida, ad esempio `Implements`.</span><span class="sxs-lookup"><span data-stu-id="c4cba-103">A `Function` or `Sub` statement inside an interface contains an invalid keyword, such as `Implements`.</span></span> <span data-ttu-id="c4cba-104">Un'interfaccia può solo definire i membri, non implementarli.</span><span class="sxs-lookup"><span data-stu-id="c4cba-104">An interface can only define members, not implement them.</span></span>  
   
- <span data-ttu-id="bc11f-105">**ID errore:** BC30270</span><span class="sxs-lookup"><span data-stu-id="bc11f-105">**Error ID:** BC30270</span></span>  
+ <span data-ttu-id="c4cba-105">**ID errore:** BC30270</span><span class="sxs-lookup"><span data-stu-id="c4cba-105">**Error ID:** BC30270</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bc11f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bc11f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c4cba-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c4cba-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="bc11f-107">Rimuovere la parola chiave non valida dall'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="bc11f-107">Remove the invalid keyword from the declaration statement.</span></span>  
+1. <span data-ttu-id="c4cba-107">Rimuovere la parola chiave non valida dall'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="c4cba-107">Remove the invalid keyword from the declaration statement.</span></span>  
   
-2. <span data-ttu-id="bc11f-108">Spostare l'implementazione dei membri di interfaccia in una classe che implementa l'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="bc11f-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
+2. <span data-ttu-id="c4cba-108">Spostare l'implementazione dei membri di interfaccia in una classe che implementa l'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="c4cba-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bc11f-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bc11f-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c4cba-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c4cba-109">See also</span></span>
 
-- [<span data-ttu-id="bc11f-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="bc11f-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
-- [<span data-ttu-id="bc11f-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="bc11f-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="c4cba-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="c4cba-110">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="c4cba-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="c4cba-111">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
