--- a/docs/visual-basic/misc/bc30578.md
+++ b/docs/visual-basic/misc/bc30578.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30578
 ms.assetid: f011673d-eced-46a7-a08e-d54d86c8a76b
-ms.openlocfilehash: 9932f34b85ed70920e0a6741a1f7283ae6d52330
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 7b7d72de59289abb48df168da113e50347b32c93
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664940"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412767"
 ---
-# <a name="end-externalsource-must-be-preceded-by-a-matching-externalsource"></a><span data-ttu-id="5709b-102">'#End ExternalSource' deve essere preceduto da un oggetto '#ExternalSource' corrispondente</span><span class="sxs-lookup"><span data-stu-id="5709b-102">'#End ExternalSource' must be preceded by a matching '#ExternalSource'</span></span>
-<span data-ttu-id="5709b-103">La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice.</span><span class="sxs-lookup"><span data-stu-id="5709b-103">The `#ExternalSource` directive references outside code, enabling the compiler to accurately report when exceptions occur within that code.</span></span> <span data-ttu-id="5709b-104">Un blocco `#ExternalSource` deve iniziare con `#ExternalSource` e terminare con `#End ExternalSource`.</span><span class="sxs-lookup"><span data-stu-id="5709b-104">An `#ExternalSource` block must begin with `#ExternalSource` and end with `#End ExternalSource`.</span></span>  
+# <a name="end-externalsource-must-be-preceded-by-a-matching-externalsource"></a><span data-ttu-id="ede83-102">'#End ExternalSource' deve essere preceduto da un oggetto '#ExternalSource' corrispondente</span><span class="sxs-lookup"><span data-stu-id="ede83-102">'#End ExternalSource' must be preceded by a matching '#ExternalSource'</span></span>
+<span data-ttu-id="ede83-103">La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice.</span><span class="sxs-lookup"><span data-stu-id="ede83-103">The `#ExternalSource` directive references outside code, enabling the compiler to accurately report when exceptions occur within that code.</span></span> <span data-ttu-id="ede83-104">Un blocco `#ExternalSource` deve iniziare con `#ExternalSource` e terminare con `#End ExternalSource`.</span><span class="sxs-lookup"><span data-stu-id="ede83-104">An `#ExternalSource` block must begin with `#ExternalSource` and end with `#End ExternalSource`.</span></span>  
   
- <span data-ttu-id="5709b-105">**ID errore:** BC30578</span><span class="sxs-lookup"><span data-stu-id="5709b-105">**Error ID:** BC30578</span></span>  
+ <span data-ttu-id="ede83-105">**ID errore:** BC30578</span><span class="sxs-lookup"><span data-stu-id="ede83-105">**Error ID:** BC30578</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5709b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5709b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ede83-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ede83-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="5709b-107">Aggiungere `#ExternalSource` nella posizione appropriata nel codice.</span><span class="sxs-lookup"><span data-stu-id="5709b-107">Add `#ExternalSource` to the appropriate location in your code.</span></span>  
+1. <span data-ttu-id="ede83-107">Aggiungere `#ExternalSource` nella posizione appropriata nel codice.</span><span class="sxs-lookup"><span data-stu-id="ede83-107">Add `#ExternalSource` to the appropriate location in your code.</span></span>  
   
-2. <span data-ttu-id="5709b-108">Rimuovere `#End ExternalSource` se non è necessario.</span><span class="sxs-lookup"><span data-stu-id="5709b-108">Remove `#End ExternalSource` if it is unnecessary.</span></span>  
+2. <span data-ttu-id="ede83-108">Rimuovere `#End ExternalSource` se non è necessario.</span><span class="sxs-lookup"><span data-stu-id="ede83-108">Remove `#End ExternalSource` if it is unnecessary.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5709b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5709b-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ede83-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ede83-109">See also</span></span>
 
-- [<span data-ttu-id="5709b-110">Direttiva #ExternalSource</span><span class="sxs-lookup"><span data-stu-id="5709b-110">#ExternalSource Directive</span></span>](../../visual-basic/language-reference/directives/externalsource-directive.md)
-- [<span data-ttu-id="5709b-111">Compilazione condizionale in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5709b-111">Conditional compilation in Visual Basic</span></span>](../programming-guide/program-structure/conditional-compilation.md)
+- [<span data-ttu-id="ede83-110">#ExternalSource (direttiva)</span><span class="sxs-lookup"><span data-stu-id="ede83-110">#ExternalSource Directive</span></span>](../language-reference/directives/externalsource-directive.md)
+- [<span data-ttu-id="ede83-111">Compilazione condizionale in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="ede83-111">Conditional compilation in Visual Basic</span></span>](../programming-guide/program-structure/conditional-compilation.md)
