--- a/docs/visual-basic/misc/bc30618.md
+++ b/docs/visual-basic/misc/bc30618.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30618
 ms.assetid: bcd365a4-5d84-4c3c-83dc-40cb4c47f73b
-ms.openlocfilehash: 12b73b4c0fc5a5a0675c4a3ea368b1f853593802
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 73a621f587e1bbe677566999806d920540683a23
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646776"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401251"
 ---
-# <a name="namespace-statements-can-occur-only-at-file-or-namespace-level"></a><span data-ttu-id="5440a-102">Le istruzioni 'Namespace' possono trovarsi solo a livello di file o di spazio dei nomi</span><span class="sxs-lookup"><span data-stu-id="5440a-102">'Namespace' statements can occur only at file or namespace level</span></span>
-<span data-ttu-id="5440a-103">Le istruzioni`Namespace` devono essere visualizzate dopo le istruzioni `Option` , le istruzioni `Imports` , le istruzioni and global attributes, but before all other declarations in your source file.</span><span class="sxs-lookup"><span data-stu-id="5440a-103">`Namespace` statements must appear after `Option` statements, `Imports` statements, and global attributes, but before all other declarations in your source file.</span></span>  
+# <a name="namespace-statements-can-occur-only-at-file-or-namespace-level"></a><span data-ttu-id="2b6ec-102">Le istruzioni 'Namespace' possono trovarsi solo a livello di file o di spazio dei nomi</span><span class="sxs-lookup"><span data-stu-id="2b6ec-102">'Namespace' statements can occur only at file or namespace level</span></span>
+<span data-ttu-id="2b6ec-103">Le istruzioni`Namespace` devono essere visualizzate dopo le istruzioni `Option` , le istruzioni `Imports` , le istruzioni and global attributes, but before all other declarations in your source file.</span><span class="sxs-lookup"><span data-stu-id="2b6ec-103">`Namespace` statements must appear after `Option` statements, `Imports` statements, and global attributes, but before all other declarations in your source file.</span></span>  
   
- <span data-ttu-id="5440a-104">**ID errore:** BC30618</span><span class="sxs-lookup"><span data-stu-id="5440a-104">**Error ID:** BC30618</span></span>  
+ <span data-ttu-id="2b6ec-104">**ID errore:** BC30618</span><span class="sxs-lookup"><span data-stu-id="2b6ec-104">**Error ID:** BC30618</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5440a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5440a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2b6ec-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2b6ec-105">To correct this error</span></span>  
   
-- <span data-ttu-id="5440a-106">Spostare l'istruzione `Namespace` all'inizio della dichiarazione dello spazio dei nomi o del file di origine.</span><span class="sxs-lookup"><span data-stu-id="5440a-106">Move the `Namespace` statement to the top of your namespace declaration or source file.</span></span>  
+- <span data-ttu-id="2b6ec-106">Spostare l'istruzione `Namespace` all'inizio della dichiarazione dello spazio dei nomi o del file di origine.</span><span class="sxs-lookup"><span data-stu-id="2b6ec-106">Move the `Namespace` statement to the top of your namespace declaration or source file.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5440a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5440a-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2b6ec-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2b6ec-107">See also</span></span>
 
-- [<span data-ttu-id="5440a-108">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="5440a-108">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
-- [<span data-ttu-id="5440a-109">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5440a-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
+- [<span data-ttu-id="2b6ec-108">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="2b6ec-108">Namespace Statement</span></span>](../language-reference/statements/namespace-statement.md)
+- [<span data-ttu-id="2b6ec-109">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="2b6ec-109">Namespaces in Visual Basic</span></span>](../programming-guide/program-structure/namespaces.md)
