--- a/docs/visual-basic/misc/bc30759.md
+++ b/docs/visual-basic/misc/bc30759.md
@@ -1,5 +1,5 @@
 ---
-title: Fa riferimento '<membername>' ha il valore 'Nothing'
+title: L'oggetto <membername> a cui si fa riferimento ha valore 'Nothing'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30759
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30759
 ms.assetid: 37f359d4-4373-4e1a-a834-789e4dbb2865
-ms.openlocfilehash: 7ab0affaf597fa6bcdcaad336ee09da94d28c491
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c99761880def9765db92f9efcda374dbf0d6b9a0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657019"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361567"
 ---
-# <a name="referenced-membername-has-a-value-of-nothing"></a><span data-ttu-id="dd1de-102">Fa riferimento '\<nomeMembro >' ha il valore 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="dd1de-102">Referenced '\<membername>' has a value of 'Nothing'</span></span>
-<span data-ttu-id="dd1de-103">All'elemento a cui si fa riferimento è stato assegnato il valore `Nothing`o non è stato assegnato alcun valore.</span><span class="sxs-lookup"><span data-stu-id="dd1de-103">The item being referenced has either not been assigned a value, or it was assigned the value `Nothing`.</span></span>  
+# <a name="referenced-membername-has-a-value-of-nothing"></a><span data-ttu-id="0c7cc-102">L'oggetto \<membername> a cui si fa riferimento ha valore 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="0c7cc-102">Referenced '\<membername>' has a value of 'Nothing'</span></span>
+<span data-ttu-id="0c7cc-103">All'elemento a cui si fa riferimento è stato assegnato il valore `Nothing`o non è stato assegnato alcun valore.</span><span class="sxs-lookup"><span data-stu-id="0c7cc-103">The item being referenced has either not been assigned a value, or it was assigned the value `Nothing`.</span></span>  
   
- <span data-ttu-id="dd1de-104">**ID errore:** BC30759</span><span class="sxs-lookup"><span data-stu-id="dd1de-104">**Error ID:** BC30759</span></span>  
+ <span data-ttu-id="0c7cc-104">**ID errore:** BC30759</span><span class="sxs-lookup"><span data-stu-id="0c7cc-104">**Error ID:** BC30759</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="dd1de-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dd1de-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0c7cc-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0c7cc-105">To correct this error</span></span>  
   
-- <span data-ttu-id="dd1de-106">Verificare che il nome dell'elemento sia stato digitato e impostato correttamente.</span><span class="sxs-lookup"><span data-stu-id="dd1de-106">Verify that item's name is spelled and set correctly.</span></span>  
+- <span data-ttu-id="0c7cc-106">Verificare che il nome dell'elemento sia stato digitato e impostato correttamente.</span><span class="sxs-lookup"><span data-stu-id="0c7cc-106">Verify that item's name is spelled and set correctly.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="dd1de-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dd1de-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0c7cc-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0c7cc-107">See also</span></span>
 
-- [<span data-ttu-id="dd1de-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="dd1de-108">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)
+- [<span data-ttu-id="0c7cc-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="0c7cc-108">Nothing</span></span>](../language-reference/nothing.md)
