--- a/docs/visual-basic/misc/bc31135.md
+++ b/docs/visual-basic/misc/bc31135.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC31135
 ms.assetid: 2eaf5a6f-d201-4f9b-bcdf-12170cb44791
-ms.openlocfilehash: 7be7a1a28ee20e127709e5dec82775a2625abc64
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 3181ae95833efdc2bdabb9d6ee7e1ff68beebb83
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69666954"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414699"
 ---
-# <a name="specifiers-are-not-valid-on-addhandler-removehandler-and-raiseevent-methods"></a><span data-ttu-id="f1948-102">Gli identificatori non sono validi nei metodi 'AddHandler', 'RemoveHandler' e 'RaiseEvent'</span><span class="sxs-lookup"><span data-stu-id="f1948-102">Specifiers are not valid on 'AddHandler', 'RemoveHandler' and 'RaiseEvent' methods</span></span>
-<span data-ttu-id="f1948-103">Non è possibile modificare le dichiarazioni dei metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` con parole chiave come `Public` o `ReadOnly`.</span><span class="sxs-lookup"><span data-stu-id="f1948-103">The `AddHandler`, `RemoveHandler`, and `RaiseEvent` method declarations cannot be modified with keywords such as `Public` or `ReadOnly`.</span></span> <span data-ttu-id="f1948-104">Solo le dichiarazioni modificabili possono contenere queste parole chiave.</span><span class="sxs-lookup"><span data-stu-id="f1948-104">Only modifiable declarations can contain such keywords.</span></span>  
+# <a name="specifiers-are-not-valid-on-addhandler-removehandler-and-raiseevent-methods"></a><span data-ttu-id="9b159-102">Gli identificatori non sono validi nei metodi 'AddHandler', 'RemoveHandler' e 'RaiseEvent'</span><span class="sxs-lookup"><span data-stu-id="9b159-102">Specifiers are not valid on 'AddHandler', 'RemoveHandler' and 'RaiseEvent' methods</span></span>
+<span data-ttu-id="9b159-103">Non è possibile modificare le dichiarazioni dei metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` con parole chiave come `Public` o `ReadOnly`.</span><span class="sxs-lookup"><span data-stu-id="9b159-103">The `AddHandler`, `RemoveHandler`, and `RaiseEvent` method declarations cannot be modified with keywords such as `Public` or `ReadOnly`.</span></span> <span data-ttu-id="9b159-104">Solo le dichiarazioni modificabili possono contenere queste parole chiave.</span><span class="sxs-lookup"><span data-stu-id="9b159-104">Only modifiable declarations can contain such keywords.</span></span>  
   
- <span data-ttu-id="f1948-105">**ID errore:** BC31135</span><span class="sxs-lookup"><span data-stu-id="f1948-105">**Error ID:** BC31135</span></span>  
+ <span data-ttu-id="9b159-105">**ID errore:** BC31135</span><span class="sxs-lookup"><span data-stu-id="9b159-105">**Error ID:** BC31135</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f1948-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f1948-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9b159-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9b159-106">To correct this error</span></span>  
   
-- <span data-ttu-id="f1948-107">Rimuovere la parola chiave dalla dichiarazione di metodo.</span><span class="sxs-lookup"><span data-stu-id="f1948-107">Remove the keyword from the method declaration.</span></span>  
+- <span data-ttu-id="9b159-107">Rimuovere la parola chiave dalla dichiarazione di metodo.</span><span class="sxs-lookup"><span data-stu-id="9b159-107">Remove the keyword from the method declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f1948-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f1948-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9b159-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9b159-108">See also</span></span>
 
-- [<span data-ttu-id="f1948-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="f1948-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="f1948-110">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="f1948-110">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="f1948-111">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="f1948-111">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="f1948-112">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="f1948-112">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
-- [<span data-ttu-id="f1948-113">Parole chiave (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="f1948-113">Keywords (Visual Basic)</span></span>](../language-reference/keywords/index.md)
-- [<span data-ttu-id="f1948-114">Eventi</span><span class="sxs-lookup"><span data-stu-id="f1948-114">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="9b159-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="9b159-109">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="9b159-110">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="9b159-110">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="9b159-111">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="9b159-111">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="9b159-112">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="9b159-112">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="9b159-113">Parole chiave (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="9b159-113">Keywords (Visual Basic)</span></span>](../language-reference/keywords/index.md)
+- [<span data-ttu-id="9b159-114">Events</span><span class="sxs-lookup"><span data-stu-id="9b159-114">Events</span></span>](../programming-guide/language-features/events/index.md)
