--- a/docs/visual-basic/misc/bc31186.md
+++ b/docs/visual-basic/misc/bc31186.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC31186
 ms.assetid: 14436245-1b2e-4ca9-a139-bd1d79ed9d72
-ms.openlocfilehash: 86bd33e4bc49f56366bede213721abbdcae5a51e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 577891c5c300fce5090dcd2451a22ed709e9cf48
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64665471"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405391"
 ---
-# <a name="-is-not-allowed"></a><span data-ttu-id="33b56-102">Il segno ':' non è consentito</span><span class="sxs-lookup"><span data-stu-id="33b56-102">':' is not allowed</span></span>
-<span data-ttu-id="33b56-103">Il segno ':' non è consentito.</span><span class="sxs-lookup"><span data-stu-id="33b56-103">':' is not allowed.</span></span> <span data-ttu-id="33b56-104">Non è possibile usare nomi completi XML in questo contesto.</span><span class="sxs-lookup"><span data-stu-id="33b56-104">XML qualified names cannot be used in this context.</span></span>  
+# <a name="-is-not-allowed"></a><span data-ttu-id="e6943-102">Il segno ':' non è consentito</span><span class="sxs-lookup"><span data-stu-id="e6943-102">':' is not allowed</span></span>
+<span data-ttu-id="e6943-103">Il segno ':' non è consentito.</span><span class="sxs-lookup"><span data-stu-id="e6943-103">':' is not allowed.</span></span> <span data-ttu-id="e6943-104">Non è possibile usare nomi completi XML in questo contesto.</span><span class="sxs-lookup"><span data-stu-id="e6943-104">XML qualified names cannot be used in this context.</span></span>  
   
- <span data-ttu-id="33b56-105">È stato specificato un valore letterale XML con un nome completo in un percorso non valido, ad esempio una destinazione in una valore letterale di istruzione di elaborazione.</span><span class="sxs-lookup"><span data-stu-id="33b56-105">An XML literal has been specified with a qualified name in an invalid location, for example, a target in a processing instruction literal.</span></span>  
+ <span data-ttu-id="e6943-105">È stato specificato un valore letterale XML con un nome completo in un percorso non valido, ad esempio una destinazione in una valore letterale di istruzione di elaborazione.</span><span class="sxs-lookup"><span data-stu-id="e6943-105">An XML literal has been specified with a qualified name in an invalid location, for example, a target in a processing instruction literal.</span></span>  
   
- <span data-ttu-id="33b56-106">**ID errore:** BC31186</span><span class="sxs-lookup"><span data-stu-id="33b56-106">**Error ID:** BC31186</span></span>  
+ <span data-ttu-id="e6943-106">**ID errore:** BC31186</span><span class="sxs-lookup"><span data-stu-id="e6943-106">**Error ID:** BC31186</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="33b56-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="33b56-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e6943-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e6943-107">To correct this error</span></span>  
   
-- <span data-ttu-id="33b56-108">Rimuovere il valore letterale XML con il nome completo o spostarlo in un percorso valido.</span><span class="sxs-lookup"><span data-stu-id="33b56-108">Remove the XML literal with the qualified name or move it to a valid location.</span></span>  
+- <span data-ttu-id="e6943-108">Rimuovere il valore letterale XML con il nome completo o spostarlo in un percorso valido.</span><span class="sxs-lookup"><span data-stu-id="e6943-108">Remove the XML literal with the qualified name or move it to a valid location.</span></span>  
   
-     <span data-ttu-id="33b56-109">Per informazioni sui caratteri validi nei nomi XML, vedere [Extensible Markup Language (XML) 1.0](https://www.w3.org/TR/xml).</span><span class="sxs-lookup"><span data-stu-id="33b56-109">For information about which characters are valid in XML names, see [Extensible Markup Language (XML) 1.0](https://www.w3.org/TR/xml).</span></span>  
+     <span data-ttu-id="e6943-109">Per informazioni sui caratteri validi nei nomi XML, vedere [Extensible Markup Language (XML) 1.0](https://www.w3.org/TR/xml).</span><span class="sxs-lookup"><span data-stu-id="e6943-109">For information about which characters are valid in XML names, see [Extensible Markup Language (XML) 1.0](https://www.w3.org/TR/xml).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="33b56-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="33b56-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e6943-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e6943-110">See also</span></span>
 
-- [<span data-ttu-id="33b56-111">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="33b56-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="33b56-112">XML</span><span class="sxs-lookup"><span data-stu-id="33b56-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="e6943-111">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="e6943-111">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="e6943-112">XML</span><span class="sxs-lookup"><span data-stu-id="e6943-112">XML</span></span>](../programming-guide/language-features/xml/index.md)
