--- a/docs/visual-basic/misc/bc32016.md
+++ b/docs/visual-basic/misc/bc32016.md
@@ -1,5 +1,5 @@
 ---
-title: "'<procedurename>' non ha parametri e il tipo restituito non può essere indicizzato"
+title: "' <procedurename> ' non ha parametri e il tipo restituito non può essere indicizzato"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32016
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32016
 ms.assetid: beead513-c237-4c04-8a18-56f075b84712
-ms.openlocfilehash: dba85c45b3c5f37b68f492e6cf4f250eca8fd2aa
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5cc2a1c5e7832ce037ae9a61b0c7e838374edf5c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604933"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413895"
 ---
-# <a name="procedurename-has-no-parameters-and-its-return-type-cannot-be-indexed"></a><span data-ttu-id="dce93-102">'\<nomeroutine >' non ha parametri e il tipo restituito non può essere indicizzato</span><span class="sxs-lookup"><span data-stu-id="dce93-102">'\<procedurename>' has no parameters and its return type cannot be indexed</span></span>
-<span data-ttu-id="dce93-103">Una chiamata a una routine `Function` o `Sub` fornisce uno o più argomenti, ma la routine non accetta alcun argomento e il relativo tipo restituito (se è un `Function`) non è un tipo di matrice.</span><span class="sxs-lookup"><span data-stu-id="dce93-103">A call to a `Function` or `Sub` procedure supplies one or more arguments, but the procedure does not take any arguments, and its return type (if it is a `Function`) is not an array type.</span></span>  
+# <a name="procedurename-has-no-parameters-and-its-return-type-cannot-be-indexed"></a><span data-ttu-id="aea09-102">' \<procedurename> ' non ha parametri e il tipo restituito non può essere indicizzato</span><span class="sxs-lookup"><span data-stu-id="aea09-102">'\<procedurename>' has no parameters and its return type cannot be indexed</span></span>
+<span data-ttu-id="aea09-103">Una chiamata a una routine `Function` o `Sub` fornisce uno o più argomenti, ma la routine non accetta alcun argomento e il relativo tipo restituito (se è un `Function`) non è un tipo di matrice.</span><span class="sxs-lookup"><span data-stu-id="aea09-103">A call to a `Function` or `Sub` procedure supplies one or more arguments, but the procedure does not take any arguments, and its return type (if it is a `Function`) is not an array type.</span></span>  
   
- <span data-ttu-id="dce93-104">**ID errore:** BC32016</span><span class="sxs-lookup"><span data-stu-id="dce93-104">**Error ID:** BC32016</span></span>  
+ <span data-ttu-id="aea09-104">**ID errore:** BC32016</span><span class="sxs-lookup"><span data-stu-id="aea09-104">**Error ID:** BC32016</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="dce93-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dce93-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="aea09-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aea09-105">To correct this error</span></span>  
   
-- <span data-ttu-id="dce93-106">Rimuovere l'argomento o gli argomenti dalla chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="dce93-106">Remove the argument or arguments from the procedure call.</span></span>  
+- <span data-ttu-id="aea09-106">Rimuovere l'argomento o gli argomenti dalla chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="aea09-106">Remove the argument or arguments from the procedure call.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="dce93-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dce93-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="aea09-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aea09-107">See also</span></span>
 
-- [<span data-ttu-id="dce93-108">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="dce93-108">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [<span data-ttu-id="dce93-109">Routine Function</span><span class="sxs-lookup"><span data-stu-id="dce93-109">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [<span data-ttu-id="dce93-110">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="dce93-110">Function Statement</span></span>](../../visual-basic/language-reference/statements/function-statement.md)
-- [<span data-ttu-id="dce93-111">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="dce93-111">Sub Statement</span></span>](../../visual-basic/language-reference/statements/sub-statement.md)
+- [<span data-ttu-id="aea09-108">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="aea09-108">Sub Procedures</span></span>](../programming-guide/language-features/procedures/sub-procedures.md)
+- [<span data-ttu-id="aea09-109">Routine Function</span><span class="sxs-lookup"><span data-stu-id="aea09-109">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="aea09-110">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="aea09-110">Function Statement</span></span>](../language-reference/statements/function-statement.md)
+- [<span data-ttu-id="aea09-111">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="aea09-111">Sub Statement</span></span>](../language-reference/statements/sub-statement.md)
