--- a/docs/visual-basic/misc/bc32200.md
+++ b/docs/visual-basic/misc/bc32200.md
@@ -1,5 +1,5 @@
 ---
-title: "'<membername>' non può essere dichiarato 'Shadows' all'esterno di una classe, struttura o interfaccia"
+title: "' <membername> ' non può essere dichiarato come ' Shadows ' all'esterno di una classe, di una struttura o di un'interfaccia"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32200
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32200
 ms.assetid: 23e28894-5854-46ef-924d-f1cb6e81bcb1
-ms.openlocfilehash: c1ec88498df819c46519341944ac8c53d529df24
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f6755504710301063801cb7654db3ec72695ccfe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626779"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402447"
 ---
-# <a name="membername-cannot-be-declared-shadows-outside-of-a-class-structure-or-interface"></a><span data-ttu-id="30d33-102">'\<nomeMembro >' non può essere dichiarato 'Shadows' all'esterno di una classe, struttura o interfaccia</span><span class="sxs-lookup"><span data-stu-id="30d33-102">'\<membername>' cannot be declared 'Shadows' outside of a class, structure, or interface</span></span>
-<span data-ttu-id="30d33-103">La parola chiave `Shadows` è presente in una dichiarazione a livello di spazio dei nomi, modulo o file.</span><span class="sxs-lookup"><span data-stu-id="30d33-103">The `Shadows` keyword appears in a declaration at namespace, module, or file level.</span></span> <span data-ttu-id="30d33-104">Lo shadowing è significativo solo all'interno di un elemento di programmazione che può ereditare da un elemento di base.</span><span class="sxs-lookup"><span data-stu-id="30d33-104">Shadowing is meaningful only within a programming element that can inherit from a base element.</span></span>  
+# <a name="membername-cannot-be-declared-shadows-outside-of-a-class-structure-or-interface"></a><span data-ttu-id="9b4c0-102">' \<membername> ' non può essere dichiarato come ' Shadows ' all'esterno di una classe, di una struttura o di un'interfaccia</span><span class="sxs-lookup"><span data-stu-id="9b4c0-102">'\<membername>' cannot be declared 'Shadows' outside of a class, structure, or interface</span></span>
+<span data-ttu-id="9b4c0-103">La parola chiave `Shadows` è presente in una dichiarazione a livello di spazio dei nomi, modulo o file.</span><span class="sxs-lookup"><span data-stu-id="9b4c0-103">The `Shadows` keyword appears in a declaration at namespace, module, or file level.</span></span> <span data-ttu-id="9b4c0-104">Lo shadowing è significativo solo all'interno di un elemento di programmazione che può ereditare da un elemento di base.</span><span class="sxs-lookup"><span data-stu-id="9b4c0-104">Shadowing is meaningful only within a programming element that can inherit from a base element.</span></span>  
   
- <span data-ttu-id="30d33-105">**ID errore:** BC32200</span><span class="sxs-lookup"><span data-stu-id="30d33-105">**Error ID:** BC32200</span></span>  
+ <span data-ttu-id="9b4c0-105">**ID errore:** BC32200</span><span class="sxs-lookup"><span data-stu-id="9b4c0-105">**Error ID:** BC32200</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="30d33-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="30d33-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9b4c0-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9b4c0-106">To correct this error</span></span>  
   
-- <span data-ttu-id="30d33-107">Rimuovere la parola chiave `Shadows` o spostare la dichiarazione all'interno di una classe, struttura o interfaccia.</span><span class="sxs-lookup"><span data-stu-id="30d33-107">Remove the `Shadows` keyword, or move the declaration inside a class, structure, or interface.</span></span>  
+- <span data-ttu-id="9b4c0-107">Rimuovere la parola chiave `Shadows` o spostare la dichiarazione all'interno di una classe, struttura o interfaccia.</span><span class="sxs-lookup"><span data-stu-id="9b4c0-107">Remove the `Shadows` keyword, or move the declaration inside a class, structure, or interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="30d33-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="30d33-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9b4c0-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9b4c0-108">See also</span></span>
 
-- [<span data-ttu-id="30d33-109">Shadows</span><span class="sxs-lookup"><span data-stu-id="30d33-109">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
-- [<span data-ttu-id="30d33-110">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="30d33-110">Shadowing in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
+- [<span data-ttu-id="9b4c0-109">Shadows</span><span class="sxs-lookup"><span data-stu-id="9b4c0-109">Shadows</span></span>](../language-reference/modifiers/shadows.md)
+- [<span data-ttu-id="9b4c0-110">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9b4c0-110">Shadowing in Visual Basic</span></span>](../programming-guide/language-features/declared-elements/shadowing.md)
