--- a/docs/visual-basic/misc/bc36547.md
+++ b/docs/visual-basic/misc/bc36547.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà o il membro di tipo anonimo '<propertyname>' è già dichiarato
+title: Proprietà o membro di tipo anonimo '<propertyname>' già dichiarato
 ms.date: 07/20/2015
 f1_keywords:
 - bc36547
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36547
 ms.assetid: 4c60d24a-62d7-404a-bc35-d1a1d9c9f851
-ms.openlocfilehash: 0f1d0ce6ae4f3d6718f214805f63cdb7ff7a873d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0c3a3a36ce12a6003531a6c9632b30eb1e2fba43
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64666288"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378770"
 ---
-# <a name="anonymous-type-member-or-property-propertyname-is-already-declared"></a><span data-ttu-id="87b83-102">Proprietà o il membro di tipo anonimo '\<NomeProprietà >' è già dichiarato</span><span class="sxs-lookup"><span data-stu-id="87b83-102">Anonymous type member or property '\<propertyname>' is already declared</span></span>
-<span data-ttu-id="87b83-103">Un nome di proprietà può essere definito una sola volta nella dichiarazione di un tipo anonimo.</span><span class="sxs-lookup"><span data-stu-id="87b83-103">A property name can be established only once in the declaration of an anonymous type.</span></span> <span data-ttu-id="87b83-104">Ad esempio, le dichiarazioni seguenti non sono valide:</span><span class="sxs-lookup"><span data-stu-id="87b83-104">For example, the following declarations are not valid:</span></span>  
+# <a name="anonymous-type-member-or-property-propertyname-is-already-declared"></a><span data-ttu-id="4e025-102">Proprietà o membro di tipo anonimo '\<propertyname>' già dichiarato</span><span class="sxs-lookup"><span data-stu-id="4e025-102">Anonymous type member or property '\<propertyname>' is already declared</span></span>
+<span data-ttu-id="4e025-103">Un nome di proprietà può essere definito una sola volta nella dichiarazione di un tipo anonimo.</span><span class="sxs-lookup"><span data-stu-id="4e025-103">A property name can be established only once in the declaration of an anonymous type.</span></span> <span data-ttu-id="4e025-104">Ad esempio, le dichiarazioni seguenti non sono valide:</span><span class="sxs-lookup"><span data-stu-id="4e025-104">For example, the following declarations are not valid:</span></span>  
   
 ```vb  
 '' Not valid, because the Label property is assigned to twice.  
@@ -25,25 +25,25 @@ ms.locfileid: "64666288"
 ' Dim anonType2 = New With {Key product.Name, Key car1.Name}  
 ```  
   
- <span data-ttu-id="87b83-105">**ID errore:** BC36547</span><span class="sxs-lookup"><span data-stu-id="87b83-105">**Error ID:** BC36547</span></span>  
+ <span data-ttu-id="4e025-105">**ID errore:** BC36547</span><span class="sxs-lookup"><span data-stu-id="4e025-105">**Error ID:** BC36547</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="87b83-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="87b83-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4e025-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4e025-106">To correct this error</span></span>  
   
-- <span data-ttu-id="87b83-107">Scegliere un nome diverso per una delle proprietà.</span><span class="sxs-lookup"><span data-stu-id="87b83-107">Choose a different name for one of the properties.</span></span>  
+- <span data-ttu-id="4e025-107">Scegliere un nome diverso per una delle proprietà.</span><span class="sxs-lookup"><span data-stu-id="4e025-107">Choose a different name for one of the properties.</span></span>  
   
 ```vb  
 ' Valid.  
 Dim anonType3 = New With {.Name = "Debra Garcia", .Label = .Name & ", President"}  
 ```  
   
-- <span data-ttu-id="87b83-108">Fornire nuovi nomi per le variabili o le proprietà da cui si deducono i nomi e i valori.</span><span class="sxs-lookup"><span data-stu-id="87b83-108">Provide new names for the variables or property names from which you are inferring names and values.</span></span>  
+- <span data-ttu-id="4e025-108">Fornire nuovi nomi per le variabili o le proprietà da cui si deducono i nomi e i valori.</span><span class="sxs-lookup"><span data-stu-id="4e025-108">Provide new names for the variables or property names from which you are inferring names and values.</span></span>  
   
 ```vb  
 ' Valid.  
 Dim anonType4 = New With {Key .ProductName = product.Name, Key .CarName = car1.Name}  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="87b83-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="87b83-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4e025-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4e025-109">See also</span></span>
 
-- [<span data-ttu-id="87b83-110">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="87b83-110">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [<span data-ttu-id="87b83-111">Procedura: Dedurre i nomi delle proprietà e i tipi nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="87b83-111">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [<span data-ttu-id="4e025-110">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="4e025-110">Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="4e025-111">Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="4e025-111">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
