--- a/docs/visual-basic/misc/bc36650-bc36653.md
+++ b/docs/visual-basic/misc/bc36650-bc36653.md
@@ -10,26 +10,26 @@ helpviewer_keywords:
 - BC36650
 - BC36653
 ms.assetid: 79287e1f-7070-4a71-96d2-aee0a0c9d8bd
-ms.openlocfilehash: 62a0a5459c7b61a363287840226b5a2fea5cd3fd
-ms.sourcegitcommit: 68653db98c5ea7744fd438710248935f70020dfb
+ms.openlocfilehash: 7f8482c46d2d1e139da1fe923113d5260ac605b4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/22/2019
-ms.locfileid: "69962795"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398669"
 ---
-# <a name="data-types-of-the-type-parameters-cannot-be-inferred-from-these-arguments-because-more-than-one-type-is-possible"></a><span data-ttu-id="9b480-102">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo perché sono possibili più tipi.</span><span class="sxs-lookup"><span data-stu-id="9b480-102">Data type(s) of the type parameter(s) cannot be inferred from these arguments because more than one type is possible</span></span>
-<span data-ttu-id="9b480-103">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo perché sono possibili più tipi.</span><span class="sxs-lookup"><span data-stu-id="9b480-103">Data type(s) of the type parameter(s) cannot be inferred from these arguments because more than one type is possible.</span></span> <span data-ttu-id="9b480-104">Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.</span><span class="sxs-lookup"><span data-stu-id="9b480-104">Specifying the data type(s) explicitly might correct this error.</span></span>  
+# <a name="data-types-of-the-type-parameters-cannot-be-inferred-from-these-arguments-because-more-than-one-type-is-possible"></a><span data-ttu-id="26b9c-102">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo perché sono possibili più tipi.</span><span class="sxs-lookup"><span data-stu-id="26b9c-102">Data type(s) of the type parameter(s) cannot be inferred from these arguments because more than one type is possible</span></span>
+<span data-ttu-id="26b9c-103">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo perché sono possibili più tipi.</span><span class="sxs-lookup"><span data-stu-id="26b9c-103">Data type(s) of the type parameter(s) cannot be inferred from these arguments because more than one type is possible.</span></span> <span data-ttu-id="26b9c-104">Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.</span><span class="sxs-lookup"><span data-stu-id="26b9c-104">Specifying the data type(s) explicitly might correct this error.</span></span>  
   
- <span data-ttu-id="9b480-105">Questo errore si verifica quando la risoluzione dell'overload non riesce.</span><span class="sxs-lookup"><span data-stu-id="9b480-105">This error occurs when overload resolution has failed.</span></span> <span data-ttu-id="9b480-106">Viene visualizzato come messaggio subordinato che indica il motivo per cui un determinato candidato di overload è stato eliminato.</span><span class="sxs-lookup"><span data-stu-id="9b480-106">It occurs as a subordinate message that indicates why a particular overload candidate has been eliminated.</span></span> <span data-ttu-id="9b480-107">L'errore spiega che, se viene applicata l'inferenza del tipo per determinare il tipo di dati dei parametri di tipo della routine generica chiamata, il compilatore rileva più di un tipo di dati per almeno uno di essi.</span><span class="sxs-lookup"><span data-stu-id="9b480-107">The error explains that if type inference is applied to determine the data type of the type parameters of the called generic procedure, the compiler finds more than one possible data type for at least one of them.</span></span>  
+ <span data-ttu-id="26b9c-105">Questo errore si verifica quando la risoluzione dell'overload non riesce.</span><span class="sxs-lookup"><span data-stu-id="26b9c-105">This error occurs when overload resolution has failed.</span></span> <span data-ttu-id="26b9c-106">Viene visualizzato come messaggio subordinato che indica il motivo per cui un determinato candidato di overload è stato eliminato.</span><span class="sxs-lookup"><span data-stu-id="26b9c-106">It occurs as a subordinate message that indicates why a particular overload candidate has been eliminated.</span></span> <span data-ttu-id="26b9c-107">L'errore spiega che, se viene applicata l'inferenza del tipo per determinare il tipo di dati dei parametri di tipo della routine generica chiamata, il compilatore rileva più di un tipo di dati per almeno uno di essi.</span><span class="sxs-lookup"><span data-stu-id="26b9c-107">The error explains that if type inference is applied to determine the data type of the type parameters of the called generic procedure, the compiler finds more than one possible data type for at least one of them.</span></span>  
   
 > [!NOTE]
-> <span data-ttu-id="9b480-108">Quando non è possibile specificare gli argomenti (ad esempio per gli operatori di query nelle espressioni di query), il messaggio di errore visualizzato non contiene la seconda frase.</span><span class="sxs-lookup"><span data-stu-id="9b480-108">When specifying arguments is not an option (for example, for query operators in query expressions), the error message appears without the second sentence.</span></span>  
+> <span data-ttu-id="26b9c-108">Quando non è possibile specificare gli argomenti (ad esempio per gli operatori di query nelle espressioni di query), il messaggio di errore visualizzato non contiene la seconda frase.</span><span class="sxs-lookup"><span data-stu-id="26b9c-108">When specifying arguments is not an option (for example, for query operators in query expressions), the error message appears without the second sentence.</span></span>  
   
- <span data-ttu-id="9b480-109">Per ulteriori informazioni ed esempi, vedere i [tipi di dati dei parametri di tipo nel metodo '\<methodName >' non possono essere dedotti da questi argomenti perché è possibile specificare più di un tipo](../../visual-basic/misc/bc36651-bc36654.md).</span><span class="sxs-lookup"><span data-stu-id="9b480-109">For more information and examples, see [Data type(s) of the type parameter(s) in method '\<methodname>' cannot be inferred from these arguments because more than one type is possible](../../visual-basic/misc/bc36651-bc36654.md).</span></span>  
+ <span data-ttu-id="26b9c-109">Per ulteriori informazioni ed esempi, vedere i [tipi di dati dei parametri di tipo nel metodo ' \<methodname> ' non possono essere dedotti da questi argomenti perché è possibile specificare più di un tipo](bc36651-bc36654.md).</span><span class="sxs-lookup"><span data-stu-id="26b9c-109">For more information and examples, see [Data type(s) of the type parameter(s) in method '\<methodname>' cannot be inferred from these arguments because more than one type is possible](bc36651-bc36654.md).</span></span>  
   
- <span data-ttu-id="9b480-110">**ID errore:** BC36653 e BC36650</span><span class="sxs-lookup"><span data-stu-id="9b480-110">**Error ID:** BC36653 and BC36650</span></span>  
+ <span data-ttu-id="26b9c-110">**ID errore:** BC36653 e BC36650</span><span class="sxs-lookup"><span data-stu-id="26b9c-110">**Error ID:** BC36653 and BC36650</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9b480-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9b480-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="26b9c-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="26b9c-111">See also</span></span>
 
-- [<span data-ttu-id="9b480-112">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9b480-112">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [<span data-ttu-id="9b480-113">Risoluzione dell'overload</span><span class="sxs-lookup"><span data-stu-id="9b480-113">Overload Resolution</span></span>](../../visual-basic/programming-guide/language-features/procedures/overload-resolution.md)
+- [<span data-ttu-id="26b9c-112">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="26b9c-112">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="26b9c-113">Risoluzione dell'overload</span><span class="sxs-lookup"><span data-stu-id="26b9c-113">Overload Resolution</span></span>](../programming-guide/language-features/procedures/overload-resolution.md)
