--- a/docs/visual-basic/misc/bc42312.md
+++ b/docs/visual-basic/misc/bc42312.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC42312
 ms.assetid: c65b702c-b634-4bfe-82b9-edcac464b494
-ms.openlocfilehash: 55b6f8b0479696af380c7aa11164e0d634380007
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f2bd3a9be488a20ffaffaf8c745ae8ad8361eb47
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663066"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84394921"
 ---
-# <a name="xml-comment-block-cannot-be-associated-with-any-language-element-that-supports-the-application-of-xml-documentation-comments"></a><span data-ttu-id="706f8-102">Il blocco di commento XML non può essere associato a un elemento del linguaggio che supporta l'applicazione di commenti relativi alla documentazione XML</span><span class="sxs-lookup"><span data-stu-id="706f8-102">XML comment block cannot be associated with any language element that supports the application of XML documentation comments</span></span>
-<span data-ttu-id="706f8-103">Il blocco di commento XML non può essere associato ad alcun elemento di linguaggio valido.</span><span class="sxs-lookup"><span data-stu-id="706f8-103">XML comment block cannot be associated with any valid language element.</span></span> <span data-ttu-id="706f8-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="706f8-104">The XML comment will be ignored.</span></span> <span data-ttu-id="706f8-105">Questo errore si verifica anche se a un tag XML nel blocco di commento non corrisponde alcun elemento di linguaggio.</span><span class="sxs-lookup"><span data-stu-id="706f8-105">This error also occurs if an XML tag in the comment block has no matching language element.</span></span>  
+# <a name="xml-comment-block-cannot-be-associated-with-any-language-element-that-supports-the-application-of-xml-documentation-comments"></a><span data-ttu-id="8edcd-102">Il blocco di commento XML non può essere associato a un elemento del linguaggio che supporta l'applicazione di commenti relativi alla documentazione XML</span><span class="sxs-lookup"><span data-stu-id="8edcd-102">XML comment block cannot be associated with any language element that supports the application of XML documentation comments</span></span>
+<span data-ttu-id="8edcd-103">Il blocco di commento XML non può essere associato ad alcun elemento di linguaggio valido.</span><span class="sxs-lookup"><span data-stu-id="8edcd-103">XML comment block cannot be associated with any valid language element.</span></span> <span data-ttu-id="8edcd-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="8edcd-104">The XML comment will be ignored.</span></span> <span data-ttu-id="8edcd-105">Questo errore si verifica anche se a un tag XML nel blocco di commento non corrisponde alcun elemento di linguaggio.</span><span class="sxs-lookup"><span data-stu-id="8edcd-105">This error also occurs if an XML tag in the comment block has no matching language element.</span></span>  
   
- <span data-ttu-id="706f8-106">**ID errore:** BC42312</span><span class="sxs-lookup"><span data-stu-id="706f8-106">**Error ID:** BC42312</span></span>  
+ <span data-ttu-id="8edcd-106">**ID errore:** BC42312</span><span class="sxs-lookup"><span data-stu-id="8edcd-106">**Error ID:** BC42312</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="706f8-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="706f8-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8edcd-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8edcd-107">To correct this error</span></span>  
   
-- <span data-ttu-id="706f8-108">Trovare e rimuovere il tag XML estraneo o fornire l'elemento di linguaggio che descrive.</span><span class="sxs-lookup"><span data-stu-id="706f8-108">Find and remove the extraneous XML tag, or supply the language element it describes.</span></span>  
+- <span data-ttu-id="8edcd-108">Trovare e rimuovere il tag XML estraneo o fornire l'elemento di linguaggio che descrive.</span><span class="sxs-lookup"><span data-stu-id="8edcd-108">Find and remove the extraneous XML tag, or supply the language element it describes.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="706f8-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="706f8-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8edcd-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8edcd-109">See also</span></span>
 
-- [<span data-ttu-id="706f8-110">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="706f8-110">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [<span data-ttu-id="706f8-111">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="706f8-111">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
+- [<span data-ttu-id="8edcd-110">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="8edcd-110">How to: Create XML Documentation</span></span>](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [<span data-ttu-id="8edcd-111">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="8edcd-111">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
