--- a/docs/visual-basic/misc/bc42313.md
+++ b/docs/visual-basic/misc/bc42313.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC42313
 ms.assetid: 43dca605-187e-4b0b-b29f-5cc4dcdc5f9f
-ms.openlocfilehash: c3db07f4bdf21396b932b93b9ca19a5373881342
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e93b90b21d3a5f0cb1d85ff0172bd3754b5ca9cd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604307"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84394908"
 ---
-# <a name="xml-comment-tag-returns-is-not-permitted-on-a-writeonly-property"></a><span data-ttu-id="d7946-102">Il tag 'returns' del commento XML non è consentito in una proprietà 'WriteOnly'</span><span class="sxs-lookup"><span data-stu-id="d7946-102">XML comment tag 'returns' is not permitted on a 'WriteOnly' Property</span></span>
-<span data-ttu-id="d7946-103">Il tag 'returns' del commento XML non è consentito in una proprietà 'WriteOnly'.</span><span class="sxs-lookup"><span data-stu-id="d7946-103">XML comment tag 'returns' is not permitted on a 'WriteOnly' Property.</span></span> <span data-ttu-id="d7946-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="d7946-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-tag-returns-is-not-permitted-on-a-writeonly-property"></a><span data-ttu-id="d051d-102">Il tag 'returns' del commento XML non è consentito in una proprietà 'WriteOnly'</span><span class="sxs-lookup"><span data-stu-id="d051d-102">XML comment tag 'returns' is not permitted on a 'WriteOnly' Property</span></span>
+<span data-ttu-id="d051d-103">Il tag 'returns' del commento XML non è consentito in una proprietà 'WriteOnly'.</span><span class="sxs-lookup"><span data-stu-id="d051d-103">XML comment tag 'returns' is not permitted on a 'WriteOnly' Property.</span></span> <span data-ttu-id="d051d-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="d051d-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="d7946-105">Un commento XML per una dichiarazione di proprietà di sola scrittura non può contenere un \<restituisce > tag.</span><span class="sxs-lookup"><span data-stu-id="d7946-105">An XML comment for a write-only property declaration cannot contain a \<returns> tag.</span></span>  
+ <span data-ttu-id="d051d-105">Un commento XML per una dichiarazione di proprietà di sola scrittura non può contenere un \<returns> tag.</span><span class="sxs-lookup"><span data-stu-id="d051d-105">An XML comment for a write-only property declaration cannot contain a \<returns> tag.</span></span>  
   
- <span data-ttu-id="d7946-106">**ID errore:** BC42313</span><span class="sxs-lookup"><span data-stu-id="d7946-106">**Error ID:** BC42313</span></span>  
+ <span data-ttu-id="d051d-106">**ID errore:** BC42313</span><span class="sxs-lookup"><span data-stu-id="d051d-106">**Error ID:** BC42313</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d7946-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d7946-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d051d-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d051d-107">To correct this error</span></span>  
   
-- <span data-ttu-id="d7946-108">Rimuovere il non supportati \<restituisce > tag.</span><span class="sxs-lookup"><span data-stu-id="d7946-108">Remove the unsupported \<returns> tag.</span></span>  
+- <span data-ttu-id="d051d-108">Rimuovere il tag non supportato \<returns> .</span><span class="sxs-lookup"><span data-stu-id="d051d-108">Remove the unsupported \<returns> tag.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d7946-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d7946-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d051d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d051d-109">See also</span></span>
 
-- [<span data-ttu-id="d7946-110">\<returns></span><span class="sxs-lookup"><span data-stu-id="d7946-110">\<returns></span></span>](../../visual-basic/language-reference/xmldoc/returns.md)
-- [<span data-ttu-id="d7946-111">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="d7946-111">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
-- [<span data-ttu-id="d7946-112">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="d7946-112">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
-- [<span data-ttu-id="d7946-113">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="d7946-113">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [\<returns>](../language-reference/xmldoc/returns.md)
+- [<span data-ttu-id="d051d-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="d051d-110">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
+- [<span data-ttu-id="d051d-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="d051d-111">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="d051d-112">Property Statement</span><span class="sxs-lookup"><span data-stu-id="d051d-112">Property Statement</span></span>](../language-reference/statements/property-statement.md)
