--- a/docs/visual-basic/misc/bc42314.md
+++ b/docs/visual-basic/misc/bc42314.md
@@ -1,5 +1,5 @@
 ---
-title: Il commento XML non può essere applicato più volte in un elemento parziale <type>
+title: Non è possibile applicare il commento XML più di una volta in un elemento  parziale<type>
 ms.date: 07/20/2015
 f1_keywords:
 - bc42314
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC42314
 ms.assetid: 23c76238-843a-44fe-88b7-25e604ee924b
-ms.openlocfilehash: 1618681c16299a8e6422fa94a1ce10a572763c47
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c3e23bb55efdb921361cd8a81df1d6ac25dfa023
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663035"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84394843"
 ---
-# <a name="xml-comment-cannot-be-applied-more-than-once-on-a-partial-type"></a><span data-ttu-id="11aa4-102">Il commento XML non può essere applicato più volte in un elemento parziale \<tipo ></span><span class="sxs-lookup"><span data-stu-id="11aa4-102">XML comment cannot be applied more than once on a partial \<type></span></span>
-<span data-ttu-id="11aa4-103">Il commento XML non può essere applicato più volte in un elemento parziale \<tipo >.</span><span class="sxs-lookup"><span data-stu-id="11aa4-103">XML comment cannot be applied more than once on a partial \<type>.</span></span> <span data-ttu-id="11aa4-104">Commenti in formato XML per questo \<tipo > verranno ignorati.</span><span class="sxs-lookup"><span data-stu-id="11aa4-104">XML comments for this \<type> will be ignored.</span></span>  
+# <a name="xml-comment-cannot-be-applied-more-than-once-on-a-partial-type"></a><span data-ttu-id="450ba-102">Non è possibile applicare il commento XML più di una volta in un elemento  parziale\<type></span><span class="sxs-lookup"><span data-stu-id="450ba-102">XML comment cannot be applied more than once on a partial \<type></span></span>
+<span data-ttu-id="450ba-103">Non è possibile applicare il commento XML più di una volta in un oggetto parziale \<type> .</span><span class="sxs-lookup"><span data-stu-id="450ba-103">XML comment cannot be applied more than once on a partial \<type>.</span></span> <span data-ttu-id="450ba-104">I commenti XML per questo \<type> verranno ignorati.</span><span class="sxs-lookup"><span data-stu-id="450ba-104">XML comments for this \<type> will be ignored.</span></span>  
   
- <span data-ttu-id="11aa4-105">Un blocco di commento XML può essere visualizzato solo sopra una parte di un tipo parziale.</span><span class="sxs-lookup"><span data-stu-id="11aa4-105">An XML comment block can appear above only one portion of a partial type.</span></span>  
+ <span data-ttu-id="450ba-105">Un blocco di commento XML può essere visualizzato solo sopra una parte di un tipo parziale.</span><span class="sxs-lookup"><span data-stu-id="450ba-105">An XML comment block can appear above only one portion of a partial type.</span></span>  
   
- <span data-ttu-id="11aa4-106">Se un blocco di commento XML viene visualizzato sopra più parti di un tipo parziale, viene generato questo avviso per ogni blocco di commento e il commento XML di livello superiore verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="11aa4-106">If an XML comment block appears above more than one portion of a partial type, this warning is created for each comment block, and the top level XML comment will be ignored.</span></span>  
+ <span data-ttu-id="450ba-106">Se un blocco di commento XML viene visualizzato sopra più parti di un tipo parziale, viene generato questo avviso per ogni blocco di commento e il commento XML di livello superiore verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="450ba-106">If an XML comment block appears above more than one portion of a partial type, this warning is created for each comment block, and the top level XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="11aa4-107">**ID errore:** BC42314</span><span class="sxs-lookup"><span data-stu-id="11aa4-107">**Error ID:** BC42314</span></span>  
+ <span data-ttu-id="450ba-107">**ID errore:** BC42314</span><span class="sxs-lookup"><span data-stu-id="450ba-107">**Error ID:** BC42314</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="11aa4-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="11aa4-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="450ba-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="450ba-108">To correct this error</span></span>  
   
-- <span data-ttu-id="11aa4-109">Rimuovere i blocchi di commento estranei.</span><span class="sxs-lookup"><span data-stu-id="11aa4-109">Remove the extraneous comment blocks.</span></span>  
+- <span data-ttu-id="450ba-109">Rimuovere i blocchi di commento estranei.</span><span class="sxs-lookup"><span data-stu-id="450ba-109">Remove the extraneous comment blocks.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="11aa4-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="11aa4-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="450ba-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="450ba-110">See also</span></span>
 
-- [<span data-ttu-id="11aa4-111">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="11aa4-111">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [<span data-ttu-id="11aa4-112">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="11aa4-112">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
+- [<span data-ttu-id="450ba-111">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="450ba-111">How to: Create XML Documentation</span></span>](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [<span data-ttu-id="450ba-112">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="450ba-112">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
