--- a/docs/visual-basic/misc/bc42321.md
+++ b/docs/visual-basic/misc/bc42321.md
@@ -1,5 +1,5 @@
 ---
-title: Il formato XML non è valido. File '<commentfile>' non è possibile includere
+title: Il formato XML non è valido. Il file "<commentfile>" non può essere incluso
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42321
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC42321
 ms.assetid: 96611980-2323-466c-82c3-8bb678290b68
-ms.openlocfilehash: 52d7fb2c90adda00ea36a97606e4349716c50f25
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 43979c005a67c65b0e08b36ed36ba3f732a8e2c8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61767627"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84400900"
 ---
-# <a name="badly-formed-xml-file-commentfile-cannot-be-included"></a><span data-ttu-id="e3be0-103">Il formato XML non è valido.</span><span class="sxs-lookup"><span data-stu-id="e3be0-103">Badly formed XML.</span></span> <span data-ttu-id="e3be0-104">File '\<filecommento >' non è possibile includere</span><span class="sxs-lookup"><span data-stu-id="e3be0-104">File '\<commentfile>' cannot be included</span></span>
-<span data-ttu-id="e3be0-105">Un tag `<include>` in uno dei commenti XML fa riferimento a un file che non esiste o a un file che contiene un formato XML non valido.</span><span class="sxs-lookup"><span data-stu-id="e3be0-105">An `<include>` tag in one of the XML comments refers to a file that does not exist or a file that contains badly formed XML.</span></span>  
+# <a name="badly-formed-xml-file-commentfile-cannot-be-included"></a><span data-ttu-id="6cccf-103">Il formato XML non è valido.</span><span class="sxs-lookup"><span data-stu-id="6cccf-103">Badly formed XML.</span></span> <span data-ttu-id="6cccf-104">Il file "\<commentfile>" non può essere incluso</span><span class="sxs-lookup"><span data-stu-id="6cccf-104">File '\<commentfile>' cannot be included</span></span>
+<span data-ttu-id="6cccf-105">Un tag `<include>` in uno dei commenti XML fa riferimento a un file che non esiste o a un file che contiene un formato XML non valido.</span><span class="sxs-lookup"><span data-stu-id="6cccf-105">An `<include>` tag in one of the XML comments refers to a file that does not exist or a file that contains badly formed XML.</span></span>  
   
- <span data-ttu-id="e3be0-106">**ID errore:** BC42321</span><span class="sxs-lookup"><span data-stu-id="e3be0-106">**Error ID:** BC42321</span></span>  
+ <span data-ttu-id="6cccf-106">**ID errore:** BC42321</span><span class="sxs-lookup"><span data-stu-id="6cccf-106">**Error ID:** BC42321</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e3be0-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e3be0-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6cccf-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6cccf-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="e3be0-108">Verificare che il file esista.</span><span class="sxs-lookup"><span data-stu-id="e3be0-108">Verify that the file exists.</span></span>  
+1. <span data-ttu-id="6cccf-108">Verificare che il file esista.</span><span class="sxs-lookup"><span data-stu-id="6cccf-108">Verify that the file exists.</span></span>  
   
-2. <span data-ttu-id="e3be0-109">Verificare che il codice XML nel file sia valido.</span><span class="sxs-lookup"><span data-stu-id="e3be0-109">Verify that the XML in the file is valid.</span></span>  
+2. <span data-ttu-id="6cccf-109">Verificare che il codice XML nel file sia valido.</span><span class="sxs-lookup"><span data-stu-id="6cccf-109">Verify that the XML in the file is valid.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e3be0-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e3be0-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6cccf-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6cccf-110">See also</span></span>
 
-- [<span data-ttu-id="e3be0-111">\<include></span><span class="sxs-lookup"><span data-stu-id="e3be0-111">\<include></span></span>](../../visual-basic/language-reference/xmldoc/include.md)
+- [\<include>](../language-reference/xmldoc/include.md)
